@@ -20,24 +20,20 @@ import com.maxmind.geoip2.record.Subdivision;
 
 import org.elasticsearch.ElasticsearchParseException;
 import org.elasticsearch.ResourceNotFoundException;
-import org.elasticsearch.cluster.ClusterState;
-import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.CheckedSupplier;
 import org.elasticsearch.common.logging.DeprecationCategory;
 import org.elasticsearch.common.logging.DeprecationLogger;
-import org.elasticsearch.common.logging.HeaderWarning;
 import org.elasticsearch.common.network.InetAddresses;
 import org.elasticsearch.common.network.NetworkAddress;
+import org.elasticsearch.core.Assertions;
 import org.elasticsearch.ingest.AbstractProcessor;
 import org.elasticsearch.ingest.IngestDocument;
 import org.elasticsearch.ingest.Processor;
-import org.elasticsearch.persistent.PersistentTasksCustomMetadata.PersistentTask;
 
 import java.io.IOException;
 import java.net.InetAddress;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.List;
@@ -50,7 +46,6 @@ import static org.elasticsearch.ingest.ConfigurationUtils.newConfigurationExcept
 import static org.elasticsearch.ingest.ConfigurationUtils.readBooleanProperty;
 import static org.elasticsearch.ingest.ConfigurationUtils.readOptionalList;
 import static org.elasticsearch.ingest.ConfigurationUtils.readStringProperty;
-import static org.elasticsearch.persistent.PersistentTasksCustomMetadata.getTaskWithId;
 
 public final class GeoIpProcessor extends AbstractProcessor {
 
@@ -66,7 +61,7 @@ public final class GeoIpProcessor extends AbstractProcessor {
     private final String field;
     private final Supplier<Boolean> isValid;
     private final String targetField;
-    private final CheckedSupplier<DatabaseReaderLazyLoader, IOException> supplier;
+    private final CheckedSupplier<GeoIpDatabase, IOException> supplier;
     private final Set<Property> properties;
     private final boolean ignoreMissing;
     private final boolean firstOnly;
@@ -74,22 +69,22 @@ public final class GeoIpProcessor extends AbstractProcessor {
 
     /**
      * Construct a geo-IP processor.
-     *  @param tag           the processor tag
+     * @param tag           the processor tag
      * @param description   the processor description
      * @param field         the source field to geo-IP map
      * @param supplier      a supplier of a geo-IP database reader; ideally this is lazily-loaded once on first use
-     * @param isValid
+     * @param isValid       a supplier that determines if the available database files are up-to-date and license compliant
      * @param targetField   the target field
      * @param properties    the properties; ideally this is lazily-loaded once on first use
      * @param ignoreMissing true if documents with a missing value for the field should be ignored
      * @param firstOnly     true if only first result should be returned in case of array
-     * @param databaseFile
+     * @param databaseFile  the name of the database file being queried; used only for tagging documents if the database is unavailable
      */
     GeoIpProcessor(
         final String tag,
         final String description,
         final String field,
-        final CheckedSupplier<DatabaseReaderLazyLoader, IOException> supplier,
+        final CheckedSupplier<GeoIpDatabase, IOException> supplier,
         final Supplier<Boolean> isValid,
         final String targetField,
         final Set<Property> properties,
@@ -125,68 +120,70 @@ public final class GeoIpProcessor extends AbstractProcessor {
             throw new IllegalArgumentException("field [" + field + "] is null, cannot extract geoip information.");
         }
 
-        DatabaseReaderLazyLoader lazyLoader = this.supplier.get();
-        if (lazyLoader == null) {
-            tag(ingestDocument, databaseFile);
+        GeoIpDatabase geoIpDatabase = this.supplier.get();
+        if (geoIpDatabase == null) {
+            if (ignoreMissing == false) {
+                tag(ingestDocument, databaseFile);
+            }
             return ingestDocument;
         }
 
-        if (ip instanceof String ipString) {
-            Map<String, Object> geoData = getGeoData(lazyLoader, ipString);
-            if (geoData.isEmpty() == false) {
-                ingestDocument.setFieldValue(targetField, geoData);
-            }
-        } else if (ip instanceof List<?> ipList) {
-            boolean match = false;
-            List<Map<String, Object>> geoDataList = new ArrayList<>(ipList.size());
-            for (Object ipAddr : ipList) {
-                if (ipAddr instanceof String == false) {
-                    throw new IllegalArgumentException("array in field [" + field + "] should only contain strings");
-                }
-                Map<String, Object> geoData = getGeoData(lazyLoader, (String) ipAddr);
-                if (geoData.isEmpty()) {
-                    geoDataList.add(null);
-                    continue;
-                }
-                if (firstOnly) {
+        try {
+            if (ip instanceof String ipString) {
+                Map<String, Object> geoData = getGeoData(geoIpDatabase, ipString);
+                if (geoData.isEmpty() == false) {
                     ingestDocument.setFieldValue(targetField, geoData);
-                    return ingestDocument;
                 }
-                match = true;
-                geoDataList.add(geoData);
+            } else if (ip instanceof List<?> ipList) {
+                boolean match = false;
+                List<Map<String, Object>> geoDataList = new ArrayList<>(ipList.size());
+                for (Object ipAddr : ipList) {
+                    if (ipAddr instanceof String == false) {
+                        throw new IllegalArgumentException("array in field [" + field + "] should only contain strings");
+                    }
+                    Map<String, Object> geoData = getGeoData(geoIpDatabase, (String) ipAddr);
+                    if (geoData.isEmpty()) {
+                        geoDataList.add(null);
+                        continue;
+                    }
+                    if (firstOnly) {
+                        ingestDocument.setFieldValue(targetField, geoData);
+                        return ingestDocument;
+                    }
+                    match = true;
+                    geoDataList.add(geoData);
+                }
+                if (match) {
+                    ingestDocument.setFieldValue(targetField, geoDataList);
+                }
+            } else {
+                throw new IllegalArgumentException("field [" + field + "] should contain only string or array of strings");
             }
-            if (match) {
-                ingestDocument.setFieldValue(targetField, geoDataList);
-            }
-        } else {
-            throw new IllegalArgumentException("field [" + field + "] should contain only string or array of strings");
+        } finally {
+            geoIpDatabase.release();
         }
         return ingestDocument;
     }
 
-    private Map<String, Object> getGeoData(DatabaseReaderLazyLoader lazyLoader, String ip) throws IOException {
-        try {
-            final String databaseType = lazyLoader.getDatabaseType();
-            final InetAddress ipAddress = InetAddresses.forString(ip);
-            Map<String, Object> geoData;
-            if (databaseType.endsWith(CITY_DB_SUFFIX)) {
-                geoData = retrieveCityGeoData(lazyLoader, ipAddress);
-            } else if (databaseType.endsWith(COUNTRY_DB_SUFFIX)) {
-                geoData = retrieveCountryGeoData(lazyLoader, ipAddress);
+    private Map<String, Object> getGeoData(GeoIpDatabase geoIpDatabase, String ip) throws IOException {
+        final String databaseType = geoIpDatabase.getDatabaseType();
+        final InetAddress ipAddress = InetAddresses.forString(ip);
+        Map<String, Object> geoData;
+        if (databaseType.endsWith(CITY_DB_SUFFIX)) {
+            geoData = retrieveCityGeoData(geoIpDatabase, ipAddress);
+        } else if (databaseType.endsWith(COUNTRY_DB_SUFFIX)) {
+            geoData = retrieveCountryGeoData(geoIpDatabase, ipAddress);
 
-            } else if (databaseType.endsWith(ASN_DB_SUFFIX)) {
-                geoData = retrieveAsnGeoData(lazyLoader, ipAddress);
+        } else if (databaseType.endsWith(ASN_DB_SUFFIX)) {
+            geoData = retrieveAsnGeoData(geoIpDatabase, ipAddress);
 
-            } else {
-                throw new ElasticsearchParseException(
-                    "Unsupported database type [" + lazyLoader.getDatabaseType() + "]",
-                    new IllegalStateException()
-                );
-            }
-            return geoData;
-        } finally {
-            lazyLoader.postLookup();
+        } else {
+            throw new ElasticsearchParseException(
+                "Unsupported database type [" + geoIpDatabase.getDatabaseType() + "]",
+                new IllegalStateException()
+            );
         }
+        return geoData;
     }
 
     @Override
@@ -210,8 +207,8 @@ public final class GeoIpProcessor extends AbstractProcessor {
         return properties;
     }
 
-    private Map<String, Object> retrieveCityGeoData(DatabaseReaderLazyLoader lazyLoader, InetAddress ipAddress) {
-        CityResponse response = lazyLoader.getCity(ipAddress);
+    private Map<String, Object> retrieveCityGeoData(GeoIpDatabase geoIpDatabase, InetAddress ipAddress) {
+        CityResponse response = geoIpDatabase.getCity(ipAddress);
         if (response == null) {
             return Map.of();
         }
@@ -286,8 +283,8 @@ public final class GeoIpProcessor extends AbstractProcessor {
         return geoData;
     }
 
-    private Map<String, Object> retrieveCountryGeoData(DatabaseReaderLazyLoader lazyLoader, InetAddress ipAddress) {
-        CountryResponse response = lazyLoader.getCountry(ipAddress);
+    private Map<String, Object> retrieveCountryGeoData(GeoIpDatabase geoIpDatabase, InetAddress ipAddress) {
+        CountryResponse response = geoIpDatabase.getCountry(ipAddress);
         if (response == null) {
             return Map.of();
         }
@@ -321,8 +318,8 @@ public final class GeoIpProcessor extends AbstractProcessor {
         return geoData;
     }
 
-    private Map<String, Object> retrieveAsnGeoData(DatabaseReaderLazyLoader lazyLoader, InetAddress ipAddress) {
-        AsnResponse response = lazyLoader.getAsn(ipAddress);
+    private Map<String, Object> retrieveAsnGeoData(GeoIpDatabase geoIpDatabase, InetAddress ipAddress) {
+        AsnResponse response = geoIpDatabase.getAsn(ipAddress);
         if (response == null) {
             return Map.of();
         }
@@ -333,31 +330,66 @@ public final class GeoIpProcessor extends AbstractProcessor {
         Map<String, Object> geoData = new HashMap<>();
         for (Property property : this.properties) {
             switch (property) {
-                case IP:
-                    geoData.put("ip", NetworkAddress.format(ipAddress));
-                    break;
-                case ASN:
+                case IP -> geoData.put("ip", NetworkAddress.format(ipAddress));
+                case ASN -> {
                     if (asn != null) {
                         geoData.put("asn", asn);
                     }
-                    break;
-                case ORGANIZATION_NAME:
+                }
+                case ORGANIZATION_NAME -> {
                     if (organization_name != null) {
                         geoData.put("organization_name", organization_name);
                     }
-                    break;
-                case NETWORK:
+                }
+                case NETWORK -> {
                     if (network != null) {
                         geoData.put("network", network.toString());
                     }
-                    break;
+                }
             }
         }
         return geoData;
     }
 
+    /**
+     * Retrieves and verifies a {@link GeoIpDatabase} instance for each execution of the {@link GeoIpProcessor}. Guards against missing
+     * custom databases, and ensures that database instances are of the proper type before use.
+     */
+    public static final class DatabaseVerifyingSupplier implements CheckedSupplier<GeoIpDatabase, IOException> {
+        private final GeoIpDatabaseProvider geoIpDatabaseProvider;
+        private final String databaseFile;
+        private final String databaseType;
+
+        public DatabaseVerifyingSupplier(GeoIpDatabaseProvider geoIpDatabaseProvider, String databaseFile, String databaseType) {
+            this.geoIpDatabaseProvider = geoIpDatabaseProvider;
+            this.databaseFile = databaseFile;
+            this.databaseType = databaseType;
+        }
+
+        @Override
+        public GeoIpDatabase get() throws IOException {
+            GeoIpDatabase loader = geoIpDatabaseProvider.getDatabase(databaseFile);
+            if (Factory.useDatabaseUnavailableProcessor(loader, databaseFile)) {
+                return null;
+            } else if (loader == null) {
+                throw new ResourceNotFoundException("database file [" + databaseFile + "] doesn't exist");
+            }
+
+            if (Assertions.ENABLED) {
+                // Only check whether the suffix has changed and not the entire database type.
+                // To sanity check whether a city db isn't overwriting with a country or asn db.
+                // For example overwriting a geoip lite city db with geoip city db is a valid change, but the db type is slightly different,
+                // by checking just the suffix this assertion doesn't fail.
+                String expectedSuffix = databaseType.substring(databaseType.lastIndexOf('-'));
+                assert loader.getDatabaseType().endsWith(expectedSuffix)
+                    : "database type [" + loader.getDatabaseType() + "] doesn't match with expected suffix [" + expectedSuffix + "]";
+            }
+            return loader;
+        }
+    }
+
     public static final class Factory implements Processor.Factory {
-        static final Set<Property> DEFAULT_CITY_PROPERTIES = Collections.unmodifiableSet(
+        static final Set<Property> DEFAULT_CITY_PROPERTIES = Set.copyOf(
             EnumSet.of(
                 Property.CONTINENT_NAME,
                 Property.COUNTRY_NAME,
@@ -368,23 +400,17 @@ public final class GeoIpProcessor extends AbstractProcessor {
                 Property.LOCATION
             )
         );
-        static final Set<Property> DEFAULT_COUNTRY_PROPERTIES = Collections.unmodifiableSet(
+        static final Set<Property> DEFAULT_COUNTRY_PROPERTIES = Set.copyOf(
             EnumSet.of(Property.CONTINENT_NAME, Property.COUNTRY_NAME, Property.COUNTRY_ISO_CODE)
         );
-        static final Set<Property> DEFAULT_ASN_PROPERTIES = Collections.unmodifiableSet(
+        static final Set<Property> DEFAULT_ASN_PROPERTIES = Set.copyOf(
             EnumSet.of(Property.IP, Property.ASN, Property.ORGANIZATION_NAME, Property.NETWORK)
         );
 
-        private final DatabaseNodeService databaseNodeService;
-        private final ClusterService clusterService;
+        private final GeoIpDatabaseProvider geoIpDatabaseProvider;
 
-        List<DatabaseReaderLazyLoader> getAllDatabases() {
-            return databaseNodeService.getAllDatabases();
-        }
-
-        public Factory(DatabaseNodeService databaseNodeService, ClusterService clusterService) {
-            this.databaseNodeService = databaseNodeService;
-            this.clusterService = clusterService;
+        public Factory(GeoIpDatabaseProvider geoIpDatabaseProvider) {
+            this.geoIpDatabaseProvider = geoIpDatabaseProvider;
         }
 
         @Override
@@ -401,23 +427,27 @@ public final class GeoIpProcessor extends AbstractProcessor {
             boolean ignoreMissing = readBooleanProperty(TYPE, processorTag, config, "ignore_missing", false);
             boolean firstOnly = readBooleanProperty(TYPE, processorTag, config, "first_only", true);
 
+            // Validating the download_database_on_pipeline_creation even if the result
+            // is not used directly by the factory.
+            downloadDatabaseOnPipelineCreation(config, processorTag);
+
             // noop, should be removed in 9.0
             Object value = config.remove("fallback_to_default_databases");
             if (value != null) {
                 DEPRECATION_LOGGER.warn(DeprecationCategory.OTHER, "default_databases_message", DEFAULT_DATABASES_DEPRECATION_MESSAGE);
             }
 
-            DatabaseReaderLazyLoader lazyLoader = databaseNodeService.getDatabase(databaseFile);
-            if (useDatabaseUnavailableProcessor(lazyLoader, databaseFile)) {
+            GeoIpDatabase geoIpDatabase = geoIpDatabaseProvider.getDatabase(databaseFile);
+            if (useDatabaseUnavailableProcessor(geoIpDatabase, databaseFile)) {
                 return new DatabaseUnavailableProcessor(processorTag, description, databaseFile);
-            } else if (lazyLoader == null) {
+            } else if (geoIpDatabase == null) {
                 throw newConfigurationException(TYPE, processorTag, "database_file", "database file [" + databaseFile + "] doesn't exist");
             }
             final String databaseType;
             try {
-                databaseType = lazyLoader.getDatabaseType();
+                databaseType = geoIpDatabase.getDatabaseType();
             } finally {
-                lazyLoader.postLookup();
+                geoIpDatabase.release();
             }
 
             final Set<Property> properties;
@@ -430,7 +460,7 @@ public final class GeoIpProcessor extends AbstractProcessor {
                         throw newConfigurationException(TYPE, processorTag, "properties", e.getMessage());
                     }
                 }
-                properties = Collections.unmodifiableSet(modifiableProperties);
+                properties = Set.copyOf(modifiableProperties);
             } else {
                 if (databaseType.endsWith(CITY_DB_SUFFIX)) {
                     properties = DEFAULT_CITY_PROPERTIES;
@@ -447,54 +477,12 @@ public final class GeoIpProcessor extends AbstractProcessor {
                     );
                 }
             }
-            CheckedSupplier<DatabaseReaderLazyLoader, IOException> supplier = () -> {
-                DatabaseReaderLazyLoader loader = databaseNodeService.getDatabase(databaseFile);
-                if (useDatabaseUnavailableProcessor(loader, databaseFile)) {
-                    return null;
-                } else if (loader == null) {
-                    throw new ResourceNotFoundException("database file [" + databaseFile + "] doesn't exist");
-                }
-                // Only check whether the suffix has changed and not the entire database type.
-                // To sanity check whether a city db isn't overwriting with a country or asn db.
-                // For example overwriting a geoip lite city db with geoip city db is a valid change, but the db type is slightly different,
-                // by checking just the suffix this assertion doesn't fail.
-                String expectedSuffix = databaseType.substring(databaseType.lastIndexOf('-'));
-                assert loader.getDatabaseType().endsWith(expectedSuffix)
-                    : "database type [" + loader.getDatabaseType() + "] doesn't match with expected suffix [" + expectedSuffix + "]";
-                return loader;
-            };
-            Supplier<Boolean> isValid = () -> {
-                ClusterState currentState = clusterService.state();
-                assert currentState != null;
-
-                PersistentTask<?> task = getTaskWithId(currentState, GeoIpDownloader.GEOIP_DOWNLOADER);
-                if (task == null || task.getState() == null) {
-                    return true;
-                }
-                GeoIpTaskState state = (GeoIpTaskState) task.getState();
-                GeoIpTaskState.Metadata metadata = state.getDatabases().get(databaseFile);
-                // we never remove metadata from cluster state, if metadata is null we deal with built-in database, which is always valid
-                if (metadata == null) {
-                    return true;
-                }
-
-                boolean valid = metadata.isValid(currentState.metadata().settings());
-                if (valid && metadata.isCloseToExpiration()) {
-                    HeaderWarning.addWarning(
-                        "database [{}] was not updated for over 25 days, geoip processor"
-                            + " will stop working if there is no update for 30 days",
-                        databaseFile
-                    );
-                }
-
-                return valid;
-            };
             return new GeoIpProcessor(
                 processorTag,
                 description,
                 ipField,
-                supplier,
-                isValid,
+                new DatabaseVerifyingSupplier(geoIpDatabaseProvider, databaseFile, databaseType),
+                () -> geoIpDatabaseProvider.isValid(databaseFile),
                 targetField,
                 properties,
                 ignoreMissing,
@@ -503,12 +491,20 @@ public final class GeoIpProcessor extends AbstractProcessor {
             );
         }
 
-        private static boolean useDatabaseUnavailableProcessor(DatabaseReaderLazyLoader loader, String databaseName) {
-            // If there is no loader for a database we should fail with a config error, but
-            // if there is no loader for a builtin database that we manage via GeoipDownloader then don't fail.
+        public static boolean downloadDatabaseOnPipelineCreation(Map<String, Object> config) {
+            return downloadDatabaseOnPipelineCreation(config, null);
+        }
+
+        public static boolean downloadDatabaseOnPipelineCreation(Map<String, Object> config, String processorTag) {
+            return readBooleanProperty(GeoIpProcessor.TYPE, processorTag, config, "download_database_on_pipeline_creation", true);
+        }
+
+        private static boolean useDatabaseUnavailableProcessor(GeoIpDatabase database, String databaseName) {
+            // If there is no instance for a database we should fail with a config error, but
+            // if there is no instance for a builtin database that we manage via GeoipDownloader then don't fail.
             // In the latter case the database should become available at a later moment, so a processor impl
             // is returned that tags documents instead.
-            return loader == null && IngestGeoIpPlugin.DEFAULT_DATABASE_FILENAMES.contains(databaseName);
+            return database == null && IngestGeoIpPlugin.DEFAULT_DATABASE_FILENAMES.contains(databaseName);
         }
 
     }
