@@ -22,6 +22,7 @@ import org.elasticsearch.client.Request;
 import org.elasticsearch.client.Response;
 import org.elasticsearch.client.RestClient;
 import org.elasticsearch.core.PathUtils;
+import org.elasticsearch.core.Strings;
 import org.elasticsearch.test.rest.ESRestTestCase;
 import org.junit.Assert;
 
@@ -51,9 +52,9 @@ public class HaHdfsFailoverTestSuiteIT extends ESRestTestCase {
         String nn2Port = "10002";
         if (ports.length() > 0) {
             final Path path = PathUtils.get(ports);
-            final List<String> lines = AccessController.doPrivileged(
-                (PrivilegedExceptionAction<List<String>>) () -> { return Files.readAllLines(path); }
-            );
+            final List<String> lines = AccessController.doPrivileged((PrivilegedExceptionAction<List<String>>) () -> {
+                return Files.readAllLines(path);
+            });
             nn1Port = lines.get(0);
             nn2Port = lines.get(1);
         }
@@ -100,7 +101,7 @@ public class HaHdfsFailoverTestSuiteIT extends ESRestTestCase {
         // Create repository
         {
             Request request = new Request("PUT", "/_snapshot/hdfs_ha_repo_read");
-            request.setJsonEntity("""
+            request.setJsonEntity(Strings.format("""
                 {
                   "type": "hdfs",
                   "settings": {
@@ -115,7 +116,7 @@ public class HaHdfsFailoverTestSuiteIT extends ESRestTestCase {
                     "conf.dfs.client.failover.proxy.provider.ha-hdfs": \
                 "org.apache.hadoop.hdfs.server.namenode.ha.ConfiguredFailoverProxyProvider"
                   }
-                }""".formatted(securityCredentials(securityEnabled, esKerberosPrincipal), nn1Port, nn2Port));
+                }""", securityCredentials(securityEnabled, esKerberosPrincipal), nn1Port, nn2Port));
             Response response = client.performRequest(request);
 
             Assert.assertEquals(200, response.getStatusLine().getStatusCode());
@@ -139,8 +140,8 @@ public class HaHdfsFailoverTestSuiteIT extends ESRestTestCase {
 
     private String securityCredentials(boolean securityEnabled, String kerberosPrincipal) {
         if (securityEnabled) {
-            return """
-                "security.principal": "%s","conf.dfs.data.transfer.protection": "authentication",""".formatted(kerberosPrincipal);
+            return String.format(java.util.Locale.ROOT, """
+                "security.principal": "%s","conf.dfs.data.transfer.protection": "authentication",""", kerberosPrincipal);
         } else {
             return "";
         }
