@@ -6,7 +6,7 @@
  */
 package org.elasticsearch.xpack.core.searchablesnapshots;
 
-import org.elasticsearch.Version;
+import org.elasticsearch.TransportVersion;
 import org.elasticsearch.cluster.routing.ShardRouting;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
@@ -24,7 +24,6 @@ import java.util.List;
 import java.util.Objects;
 
 import static java.util.Collections.unmodifiableList;
-import static java.util.stream.Collectors.toList;
 
 public class SearchableSnapshotShardStats implements Writeable, ToXContentObject {
 
@@ -97,7 +96,7 @@ public class SearchableSnapshotShardStats implements Writeable, ToXContentObject
             {
                 List<CacheIndexInputStats> stats = inputStats.stream()
                     .sorted(Comparator.comparing(CacheIndexInputStats::getFileExt))
-                    .collect(toList());
+                    .toList();
                 for (CacheIndexInputStats stat : stats) {
                     stat.toXContent(builder, params);
                 }
@@ -200,7 +199,7 @@ public class SearchableSnapshotShardStats implements Writeable, ToXContentObject
         }
 
         CacheIndexInputStats(final StreamInput in) throws IOException {
-            if (in.getVersion().before(Version.V_7_12_0)) {
+            if (in.getTransportVersion().before(TransportVersion.V_7_12_0)) {
                 // This API is currently only used internally for testing, so BWC breaking changes are OK.
                 // We just throw an exception here to get a better error message in case this would be called
                 // in a mixed version cluster
@@ -208,14 +207,14 @@ public class SearchableSnapshotShardStats implements Writeable, ToXContentObject
             }
             this.fileExt = in.readString();
             this.numFiles = in.readVLong();
-            if (in.getVersion().before(Version.V_7_13_0)) {
-                this.totalSize = new ByteSizeValue(in.readVLong());
+            if (in.getTransportVersion().before(TransportVersion.V_7_13_0)) {
+                this.totalSize = ByteSizeValue.ofBytes(in.readVLong());
                 this.minSize = ByteSizeValue.ZERO;
                 this.maxSize = ByteSizeValue.ZERO;
             } else {
-                this.totalSize = new ByteSizeValue(in);
-                this.minSize = new ByteSizeValue(in);
-                this.maxSize = new ByteSizeValue(in);
+                this.totalSize = ByteSizeValue.readFrom(in);
+                this.minSize = ByteSizeValue.readFrom(in);
+                this.maxSize = ByteSizeValue.readFrom(in);
             }
             this.openCount = in.readVLong();
             this.closeCount = in.readVLong();
@@ -231,7 +230,7 @@ public class SearchableSnapshotShardStats implements Writeable, ToXContentObject
             this.directBytesRead = new TimedCounter(in);
             this.optimizedBytesRead = new TimedCounter(in);
             this.blobStoreBytesRequested = new Counter(in);
-            if (in.getVersion().onOrAfter(Version.V_7_13_0)) {
+            if (in.getTransportVersion().onOrAfter(TransportVersion.V_7_13_0)) {
                 this.luceneBytesRead = new Counter(in);
             } else {
                 this.luceneBytesRead = new Counter(0, 0, 0, 0);
@@ -249,9 +248,9 @@ public class SearchableSnapshotShardStats implements Writeable, ToXContentObject
             return new CacheIndexInputStats(
                 cis1.fileExt,
                 cis1.numFiles + cis2.numFiles,
-                new ByteSizeValue(Math.addExact(cis1.totalSize.getBytes(), cis2.totalSize.getBytes())),
-                new ByteSizeValue(Math.min(cis1.minSize.getBytes(), cis2.minSize.getBytes())),
-                new ByteSizeValue(Math.max(cis1.maxSize.getBytes(), cis2.maxSize.getBytes())),
+                ByteSizeValue.ofBytes(Math.addExact(cis1.totalSize.getBytes(), cis2.totalSize.getBytes())),
+                ByteSizeValue.ofBytes(Math.min(cis1.minSize.getBytes(), cis2.minSize.getBytes())),
+                ByteSizeValue.ofBytes(Math.max(cis1.maxSize.getBytes(), cis2.maxSize.getBytes())),
                 cis1.openCount + cis2.openCount,
                 cis1.closeCount + cis2.closeCount,
                 cis1.forwardSmallSeeks.add(cis2.forwardSmallSeeks),
@@ -273,7 +272,7 @@ public class SearchableSnapshotShardStats implements Writeable, ToXContentObject
 
         @Override
         public void writeTo(StreamOutput out) throws IOException {
-            if (out.getVersion().before(Version.V_7_12_0)) {
+            if (out.getTransportVersion().before(TransportVersion.V_7_12_0)) {
                 // This API is currently only used internally for testing, so BWC breaking changes are OK.
                 // We just throw an exception here to get a better error message in case this would be called
                 // in a mixed version cluster
@@ -281,7 +280,7 @@ public class SearchableSnapshotShardStats implements Writeable, ToXContentObject
             }
             out.writeString(fileExt);
             out.writeVLong(numFiles);
-            if (out.getVersion().before(Version.V_7_13_0)) {
+            if (out.getTransportVersion().before(TransportVersion.V_7_13_0)) {
                 out.writeVLong(totalSize.getBytes());
             } else {
                 totalSize.writeTo(out);
@@ -303,7 +302,7 @@ public class SearchableSnapshotShardStats implements Writeable, ToXContentObject
             directBytesRead.writeTo(out);
             optimizedBytesRead.writeTo(out);
             blobStoreBytesRequested.writeTo(out);
-            if (out.getVersion().onOrAfter(Version.V_7_13_0)) {
+            if (out.getTransportVersion().onOrAfter(TransportVersion.V_7_13_0)) {
                 luceneBytesRead.writeTo(out);
             }
             out.writeVLong(currentIndexCacheFills);
@@ -331,7 +330,7 @@ public class SearchableSnapshotShardStats implements Writeable, ToXContentObject
 
         public ByteSizeValue getAverageSize() {
             final double average = (double) totalSize.getBytes() / (double) numFiles;
-            return new ByteSizeValue(Math.round(average));
+            return ByteSizeValue.ofBytes(Math.round(average));
         }
 
         public long getOpenCount() {
