@@ -28,24 +28,32 @@ import java.util.Set;
 import java.util.TreeSet;
 import java.util.stream.Collectors;
 
+import static org.elasticsearch.transport.RemoteClusterPortSettings.TRANSPORT_VERSION_ADVANCED_REMOTE_CLUSTER_SECURITY_CCS;
+
 /**
  * Response for a {@link GetUserPrivilegesRequest}
  */
 public final class GetUserPrivilegesResponse extends ActionResponse {
 
-    private Set<String> cluster;
-    private Set<ConfigurableClusterPrivilege> configurableClusterPrivileges;
-    private Set<Indices> index;
-    private Set<RoleDescriptor.ApplicationResourcePrivileges> application;
-    private Set<String> runAs;
+    private final Set<String> cluster;
+    private final Set<ConfigurableClusterPrivilege> configurableClusterPrivileges;
+    private final Set<Indices> index;
+    private final Set<RoleDescriptor.ApplicationResourcePrivileges> application;
+    private final Set<String> runAs;
+    private final Set<RemoteIndices> remoteIndex;
 
     public GetUserPrivilegesResponse(StreamInput in) throws IOException {
         super(in);
-        cluster = Collections.unmodifiableSet(in.readSet(StreamInput::readString));
-        configurableClusterPrivileges = Collections.unmodifiableSet(in.readSet(ConfigurableClusterPrivileges.READER));
-        index = Collections.unmodifiableSet(in.readSet(Indices::new));
-        application = Collections.unmodifiableSet(in.readSet(RoleDescriptor.ApplicationResourcePrivileges::new));
-        runAs = Collections.unmodifiableSet(in.readSet(StreamInput::readString));
+        cluster = in.readImmutableSet(StreamInput::readString);
+        configurableClusterPrivileges = in.readImmutableSet(ConfigurableClusterPrivileges.READER);
+        index = in.readImmutableSet(Indices::new);
+        application = in.readImmutableSet(RoleDescriptor.ApplicationResourcePrivileges::new);
+        runAs = in.readImmutableSet(StreamInput::readString);
+        if (in.getTransportVersion().onOrAfter(TRANSPORT_VERSION_ADVANCED_REMOTE_CLUSTER_SECURITY_CCS)) {
+            remoteIndex = in.readImmutableSet(RemoteIndices::new);
+        } else {
+            remoteIndex = Set.of();
+        }
     }
 
     public GetUserPrivilegesResponse(
@@ -53,13 +61,15 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
         Set<ConfigurableClusterPrivilege> conditionalCluster,
         Set<Indices> index,
         Set<RoleDescriptor.ApplicationResourcePrivileges> application,
-        Set<String> runAs
+        Set<String> runAs,
+        Set<RemoteIndices> remoteIndex
     ) {
         this.cluster = Collections.unmodifiableSet(cluster);
         this.configurableClusterPrivileges = Collections.unmodifiableSet(conditionalCluster);
         this.index = Collections.unmodifiableSet(index);
         this.application = Collections.unmodifiableSet(application);
         this.runAs = Collections.unmodifiableSet(runAs);
+        this.remoteIndex = Collections.unmodifiableSet(remoteIndex);
     }
 
     public Set<String> getClusterPrivileges() {
@@ -74,12 +84,20 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
         return index;
     }
 
+    public Set<RemoteIndices> getRemoteIndexPrivileges() {
+        return remoteIndex;
+    }
+
     public Set<RoleDescriptor.ApplicationResourcePrivileges> getApplicationPrivileges() {
         return application;
     }
 
     public Set<String> getRunAs() {
         return runAs;
+    }
+
+    public boolean hasRemoteIndicesPrivileges() {
+        return false == remoteIndex.isEmpty();
     }
 
     @Override
@@ -89,6 +107,17 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
         out.writeCollection(index);
         out.writeCollection(application);
         out.writeCollection(runAs, StreamOutput::writeString);
+        if (out.getTransportVersion().onOrAfter(TRANSPORT_VERSION_ADVANCED_REMOTE_CLUSTER_SECURITY_CCS)) {
+            out.writeCollection(remoteIndex);
+        } else if (hasRemoteIndicesPrivileges()) {
+            throw new IllegalArgumentException(
+                "versions of Elasticsearch before ["
+                    + TRANSPORT_VERSION_ADVANCED_REMOTE_CLUSTER_SECURITY_CCS
+                    + "] can't handle remote indices privileges and attempted to send to ["
+                    + out.getTransportVersion()
+                    + "]"
+            );
+        }
     }
 
     @Override
@@ -104,12 +133,34 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
             && Objects.equals(configurableClusterPrivileges, that.configurableClusterPrivileges)
             && Objects.equals(index, that.index)
             && Objects.equals(application, that.application)
-            && Objects.equals(runAs, that.runAs);
+            && Objects.equals(runAs, that.runAs)
+            && Objects.equals(remoteIndex, that.remoteIndex);
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(cluster, configurableClusterPrivileges, index, application, runAs);
+        return Objects.hash(cluster, configurableClusterPrivileges, index, application, runAs, remoteIndex);
+    }
+
+    public record RemoteIndices(Indices indices, Set<String> remoteClusters) implements ToXContentObject, Writeable {
+
+        public RemoteIndices(StreamInput in) throws IOException {
+            this(new Indices(in), Collections.unmodifiableSet(new TreeSet<>(in.readSet(StreamInput::readString))));
+        }
+
+        @Override
+        public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
+            builder.startObject();
+            indices.innerToXContent(builder);
+            builder.field(RoleDescriptor.Fields.REMOTE_CLUSTERS.getPreferredName(), remoteClusters);
+            return builder.endObject();
+        }
+
+        @Override
+        public void writeTo(StreamOutput out) throws IOException {
+            indices.writeTo(out);
+            out.writeStringCollection(remoteClusters);
+        }
     }
 
     /**
@@ -142,12 +193,12 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
             // The use of TreeSet is to provide a consistent order that can be relied upon in tests
             indices = Collections.unmodifiableSet(new TreeSet<>(in.readSet(StreamInput::readString)));
             privileges = Collections.unmodifiableSet(new TreeSet<>(in.readSet(StreamInput::readString)));
-            fieldSecurity = Collections.unmodifiableSet(in.readSet(input -> {
+            fieldSecurity = in.readImmutableSet(input -> {
                 final String[] grant = input.readOptionalStringArray();
                 final String[] exclude = input.readOptionalStringArray();
                 return new FieldPermissionsDefinition.FieldGrantExcludeGroup(grant, exclude);
-            }));
-            queries = Collections.unmodifiableSet(in.readSet(StreamInput::readBytesReference));
+            });
+            queries = in.readImmutableSet(StreamInput::readBytesReference);
             this.allowRestrictedIndices = in.readBoolean();
         }
 
@@ -215,6 +266,11 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
         @Override
         public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
             builder.startObject();
+            innerToXContent(builder);
+            return builder.endObject();
+        }
+
+        void innerToXContent(XContentBuilder builder) throws IOException {
             builder.field(RoleDescriptor.Fields.NAMES.getPreferredName(), indices);
             builder.field(RoleDescriptor.Fields.PRIVILEGES.getPreferredName(), privileges);
             if (fieldSecurity.stream().anyMatch(g -> nonEmpty(g.getGrantedFields()) || nonEmpty(g.getExcludedFields()))) {
@@ -242,7 +298,6 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
                 builder.endArray();
             }
             builder.field(RoleDescriptor.Fields.ALLOW_RESTRICTED_INDICES.getPreferredName(), allowRestrictedIndices);
-            return builder.endObject();
         }
 
         private static boolean nonEmpty(String[] grantedFields) {
