@@ -8,34 +8,35 @@ package org.elasticsearch.xpack.core.security.authc;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.elasticsearch.Assertions;
-import org.elasticsearch.Version;
-import org.elasticsearch.common.Strings;
+import org.elasticsearch.TransportVersion;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.io.stream.BytesStreamOutput;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.io.stream.Writeable;
 import org.elasticsearch.common.util.ArrayUtils;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.elasticsearch.common.xcontent.XContentHelper;
+import org.elasticsearch.core.Assertions;
+import org.elasticsearch.core.CheckedFunction;
 import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.Strings;
 import org.elasticsearch.xcontent.ConstructingObjectParser;
 import org.elasticsearch.xcontent.ParseField;
 import org.elasticsearch.xcontent.ToXContentObject;
 import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xcontent.XContentType;
+import org.elasticsearch.xpack.core.security.authc.CrossClusterAccessSubjectInfo.RoleDescriptorsBytes;
 import org.elasticsearch.xpack.core.security.authc.esnative.NativeRealmSettings;
 import org.elasticsearch.xpack.core.security.authc.file.FileRealmSettings;
 import org.elasticsearch.xpack.core.security.authc.service.ServiceAccountSettings;
 import org.elasticsearch.xpack.core.security.authc.support.AuthenticationContextSerializer;
+import org.elasticsearch.xpack.core.security.authz.RoleDescriptor;
 import org.elasticsearch.xpack.core.security.user.AnonymousUser;
-import org.elasticsearch.xpack.core.security.user.AsyncSearchUser;
-import org.elasticsearch.xpack.core.security.user.SecurityProfileUser;
-import org.elasticsearch.xpack.core.security.user.SystemUser;
+import org.elasticsearch.xpack.core.security.user.InternalUser;
+import org.elasticsearch.xpack.core.security.user.InternalUsers;
 import org.elasticsearch.xpack.core.security.user.User;
-import org.elasticsearch.xpack.core.security.user.XPackSecurityUser;
-import org.elasticsearch.xpack.core.security.user.XPackUser;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
@@ -47,11 +48,15 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicBoolean;
 
+import static org.elasticsearch.transport.RemoteClusterPortSettings.TRANSPORT_VERSION_ADVANCED_REMOTE_CLUSTER_SECURITY_CCS;
 import static org.elasticsearch.xcontent.ConstructingObjectParser.constructorArg;
 import static org.elasticsearch.xcontent.ConstructingObjectParser.optionalConstructorArg;
 import static org.elasticsearch.xpack.core.security.authc.Authentication.RealmRef.newAnonymousRealmRef;
 import static org.elasticsearch.xpack.core.security.authc.Authentication.RealmRef.newApiKeyRealmRef;
+import static org.elasticsearch.xpack.core.security.authc.Authentication.RealmRef.newCrossClusterAccessRealmRef;
 import static org.elasticsearch.xpack.core.security.authc.Authentication.RealmRef.newInternalAttachRealmRef;
 import static org.elasticsearch.xpack.core.security.authc.Authentication.RealmRef.newInternalFallbackRealmRef;
 import static org.elasticsearch.xpack.core.security.authc.Authentication.RealmRef.newServiceAccountRealmRef;
@@ -61,80 +66,117 @@ import static org.elasticsearch.xpack.core.security.authc.AuthenticationField.AP
 import static org.elasticsearch.xpack.core.security.authc.AuthenticationField.API_KEY_REALM_TYPE;
 import static org.elasticsearch.xpack.core.security.authc.AuthenticationField.ATTACH_REALM_NAME;
 import static org.elasticsearch.xpack.core.security.authc.AuthenticationField.ATTACH_REALM_TYPE;
+import static org.elasticsearch.xpack.core.security.authc.AuthenticationField.CROSS_CLUSTER_ACCESS_AUTHENTICATION_KEY;
+import static org.elasticsearch.xpack.core.security.authc.AuthenticationField.CROSS_CLUSTER_ACCESS_REALM_NAME;
+import static org.elasticsearch.xpack.core.security.authc.AuthenticationField.CROSS_CLUSTER_ACCESS_REALM_TYPE;
+import static org.elasticsearch.xpack.core.security.authc.AuthenticationField.CROSS_CLUSTER_ACCESS_ROLE_DESCRIPTORS_KEY;
 import static org.elasticsearch.xpack.core.security.authc.AuthenticationField.FALLBACK_REALM_NAME;
 import static org.elasticsearch.xpack.core.security.authc.AuthenticationField.FALLBACK_REALM_TYPE;
 import static org.elasticsearch.xpack.core.security.authc.RealmDomain.REALM_DOMAIN_PARSER;
 
-// TODO(hub-cap) Clean this up after moving User over - This class can re-inherit its field AUTHENTICATION_KEY in AuthenticationField.
-// That interface can be removed
+/**
+ * The Authentication class encapsulates identity information created after successful authentication
+ * and is the starting point of subsequent authorization.
+ *
+ * Authentication is serialized and travels across the cluster nodes as the sub-requests are handled,
+ * and can also be cached by long-running jobs that continue to act on behalf of the user, beyond
+ * the lifetime of the original request.
+ *
+ * The authentication consists of two {@link Subject}s
+ * <ul>
+ *     <li>{@link #authenticatingSubject} performs the authentication, i.e. it provides a credential.</li>
+ *     <li>{@link #effectiveSubject} The subject that {@link #authenticatingSubject} impersonates ({@link #isRunAs()})</li>
+ * </ul>
+ * If {@link #isRunAs()} is {@code false}, the two {@link Subject}s will be the same object.
+ *
+ * Authentication also has a {@link #type} that indicates which mechanism the {@link #authenticatingSubject}
+ * uses to perform the authentication.
+ *
+ * The Authentication's version is its {@link Subject}'s version, i.e. {@code getEffectiveSubject().getTransportVersion()}.
+ * It is guaranteed that the versions are identical for the two Subjects. Hence {@code getAuthenticatingSubject().getTransportVersion()}
+ * will give out the same result. But using {@code getEffectiveSubject()} is more idiomatic since most callers
+ * of this class should just need to know about the {@link #effectiveSubject}. That is, often times, the caller
+ * begins with {@code authentication.getEffectiveSubject()} for interrogating an Authentication object.
+ */
 public final class Authentication implements ToXContentObject {
 
     private static final Logger logger = LogManager.getLogger(Authentication.class);
+    private static final TransportVersion VERSION_AUTHENTICATION_TYPE = TransportVersion.fromId(6_07_00_99);
 
-    public static final Version VERSION_API_KEY_ROLES_AS_BYTES = Version.V_7_9_0;
-    public static final Version VERSION_REALM_DOMAINS = Version.V_8_2_0;
-
-    private final User user;
-    private final RealmRef authenticatedBy;
-    private final RealmRef lookedUpBy;
-    private final Version version;
+    public static final TransportVersion VERSION_API_KEY_ROLES_AS_BYTES = TransportVersion.V_7_9_0;
+    public static final TransportVersion VERSION_REALM_DOMAINS = TransportVersion.V_8_2_0;
+    public static final TransportVersion VERSION_METADATA_BEYOND_GENERIC_MAP = TransportVersion.V_8_8_0;
     private final AuthenticationType type;
-    private final Map<String, Object> metadata; // authentication contains metadata, includes api_key details (including api_key metadata)
-
     private final Subject authenticatingSubject;
     private final Subject effectiveSubject;
 
-    private Authentication(
-        User user,
-        RealmRef authenticatedBy,
-        RealmRef lookedUpBy,
-        Version version,
-        AuthenticationType type,
-        Map<String, Object> metadata
-    ) {
-        this.user = Objects.requireNonNull(user);
-        this.authenticatedBy = Objects.requireNonNull(authenticatedBy);
-        this.lookedUpBy = lookedUpBy;
-        this.version = version;
-        this.type = type;
-        this.metadata = metadata;
-        if (user instanceof RunAsUser runAsUser) {
-            authenticatingSubject = new Subject(runAsUser.authenticatingUser, authenticatedBy, version, metadata);
-            // The lookup user for run-as currently doesn't have authentication metadata associated with them because
-            // lookupUser only returns the User object. The lookup user for authorization delegation does have
-            // authentication metadata, but the realm does not expose this difference between authenticatingUser and
-            // delegateUser so effectively this is handled together with the authenticatingSubject not effectiveSubject.
-            effectiveSubject = new Subject(user, lookedUpBy, version, Map.of());
-        } else {
-            authenticatingSubject = effectiveSubject = new Subject(user, authenticatedBy, version, metadata);
+    private Authentication(Subject subject, AuthenticationType type) {
+        this(subject, subject, type);
+    }
+
+    private Authentication(Subject effectiveSubject, Subject authenticatingSubject, AuthenticationType type) {
+        this.effectiveSubject = Objects.requireNonNull(effectiveSubject, "effective subject cannot be null");
+        this.authenticatingSubject = Objects.requireNonNull(authenticatingSubject, "authenticating subject cannot be null");
+        this.type = Objects.requireNonNull(type, "authentication type cannot be null");
+        if (Assertions.ENABLED) {
+            checkConsistency();
         }
-        this.assertApiKeyMetadata();
-        this.assertDomainAssignment();
     }
 
     public Authentication(StreamInput in) throws IOException {
-        this.user = AuthenticationSerializationHelper.readUserFrom(in);
-        this.authenticatedBy = new RealmRef(in);
-        if (in.readBoolean()) {
-            this.lookedUpBy = new RealmRef(in);
+        // Read the user(s)
+        final User outerUser = AuthenticationSerializationHelper.readUserWithoutTrailingBoolean(in);
+        final boolean hasInnerUser;
+        if (outerUser instanceof InternalUser) {
+            hasInnerUser = false;
         } else {
-            this.lookedUpBy = null;
+            hasInnerUser = in.readBoolean();
         }
-        this.version = in.getVersion();
-        type = AuthenticationType.values()[in.readVInt()];
-        metadata = in.readMap();
-        if (user instanceof RunAsUser runAsUser) {
-            authenticatingSubject = new Subject(runAsUser.authenticatingUser, authenticatedBy, version, metadata);
+        final User innerUser;
+        if (hasInnerUser) {
+            innerUser = AuthenticationSerializationHelper.readUserFrom(in);
+            assert false == innerUser instanceof InternalUser : "internal users cannot participate in run-as [" + innerUser + "]";
+        } else {
+            innerUser = null;
+        }
+
+        final RealmRef authenticatedBy = new RealmRef(in);
+        final RealmRef lookedUpBy;
+        if (in.readBoolean()) {
+            lookedUpBy = new RealmRef(in);
+        } else {
+            lookedUpBy = null;
+        }
+
+        // The valid combinations for innerUser and lookedUpBy are:
+        // 1. InnerUser == null -> no run-as -> lookedUpBy must be null as well
+        // 2. innerUser != null -> lookedUp by can be either null (failed run-as lookup) or non-null (successful lookup)
+        // 3. lookedUpBy == null -> innerUser can be either null (no run-as) or non-null (failed run-as lookup)
+        // 4. lookedUpBy != null -> successful run-as -> innerUser must be NOT null
+        assert innerUser != null || lookedUpBy == null : "Authentication has no inner-user, but looked-up-by is [" + lookedUpBy + "]";
+
+        final TransportVersion version = in.getTransportVersion();
+        final Map<String, Object> metadata;
+        if (version.onOrAfter(VERSION_AUTHENTICATION_TYPE)) {
+            type = AuthenticationType.values()[in.readVInt()];
+            metadata = readMetadata(in);
+        } else {
+            type = AuthenticationType.REALM;
+            metadata = Map.of();
+        }
+        if (innerUser != null) {
+            authenticatingSubject = new Subject(innerUser, authenticatedBy, version, metadata);
             // The lookup user for run-as currently doesn't have authentication metadata associated with them because
             // lookupUser only returns the User object. The lookup user for authorization delegation does have
             // authentication metadata, but the realm does not expose this difference between authenticatingUser and
             // delegateUser so effectively this is handled together with the authenticatingSubject not effectiveSubject.
-            effectiveSubject = new Subject(user, lookedUpBy, version, Map.of());
+            effectiveSubject = new Subject(outerUser, lookedUpBy, version, Map.of());
         } else {
-            authenticatingSubject = effectiveSubject = new Subject(user, authenticatedBy, version, metadata);
+            authenticatingSubject = effectiveSubject = new Subject(outerUser, authenticatedBy, version, metadata);
         }
-        this.assertApiKeyMetadata();
-        this.assertDomainAssignment();
+        if (Assertions.ENABLED) {
+            checkConsistency();
+        }
     }
 
     /**
@@ -152,6 +194,10 @@ public final class Authentication implements ToXContentObject {
         return effectiveSubject;
     }
 
+    public AuthenticationType getAuthenticationType() {
+        return type;
+    }
+
     /**
      * Whether the authentication contains a subject run-as another subject. That is, the authentication subject
      * is different from the effective subject.
@@ -160,101 +206,153 @@ public final class Authentication implements ToXContentObject {
         return authenticatingSubject != effectiveSubject;
     }
 
-    /**
-     * Use {@code getEffectiveSubject().getUser()} instead.
-     */
-    @Deprecated
-    public User getUser() {
-        return user;
-    }
-
-    /**
-     * Use {@code getAuthenticatingSubject().getRealm()} instead.
-     */
-    @Deprecated
-    public RealmRef getAuthenticatedBy() {
-        return authenticatedBy;
-    }
-
-    /**
-     * The use case for this method is largely trying to tell whether there is a run-as user
-     * and can be replaced by {@code isRunAs}
-     */
-    @Deprecated
-    public RealmRef getLookedUpBy() {
-        return lookedUpBy;
-    }
-
-    /**
-     * Get the realm where the effective user comes from.
-     * The effective user is the es-security-runas-user if present or the authenticated user.
-     *
-     * Use {@code getEffectiveSubject().getRealm()} instead.
-     */
-    @Deprecated
-    public RealmRef getSourceRealm() {
-        return lookedUpBy == null ? authenticatedBy : lookedUpBy;
-    }
-
-    /**
-     * Returns the authentication version.
-     * Nodes can only interpret authentications from current or older versions as the node's.
-     *
-     * Authentication is serialized and travels across the cluster nodes as the sub-requests are handled,
-     * and can also be cached by long-running jobs that continue to act on behalf of the user, beyond
-     * the lifetime of the original request.
-     */
-    public Version getVersion() {
-        return version;
-    }
-
-    public AuthenticationType getAuthenticationType() {
-        return type;
-    }
-
-    public Map<String, Object> getMetadata() {
-        return metadata;
+    public boolean isFailedRunAs() {
+        return isRunAs() && effectiveSubject.getRealm() == null;
     }
 
     /**
      * Returns a new {@code Authentication}, like this one, but which is compatible with older version nodes.
      * This is commonly employed when the {@code Authentication} is serialized across cluster nodes with mixed versions.
      */
-    public Authentication maybeRewriteForOlderVersion(Version olderVersion) {
+    public Authentication maybeRewriteForOlderVersion(TransportVersion olderVersion) {
         // TODO how can this not be true
         // assert olderVersion.onOrBefore(getVersion());
-        Authentication newAuthentication = new Authentication(
-            getUser(),
-            maybeRewriteRealmRef(olderVersion, getAuthenticatedBy()),
-            maybeRewriteRealmRef(olderVersion, getLookedUpBy()),
-            olderVersion,
-            getAuthenticationType(),
-            maybeRewriteMetadataForApiKeyRoleDescriptors(olderVersion, this)
-        );
-        if (isAssignedToDomain() && false == newAuthentication.isAssignedToDomain()) {
-            logger.info("Rewriting authentication [" + this + "] without domain");
+
+        // cross cluster access introduced a new synthetic realm and subject type; these cannot be parsed by older versions, so rewriting is
+        // not possible
+        if (isCrossClusterAccess() && olderVersion.before(TRANSPORT_VERSION_ADVANCED_REMOTE_CLUSTER_SECURITY_CCS)) {
+            throw new IllegalArgumentException(
+                "versions of Elasticsearch before ["
+                    + TRANSPORT_VERSION_ADVANCED_REMOTE_CLUSTER_SECURITY_CCS
+                    + "] can't handle cross cluster access authentication and attempted to rewrite for ["
+                    + olderVersion
+                    + "]"
+            );
+        }
+
+        final Map<String, Object> newMetadata = maybeRewriteMetadata(olderVersion, this);
+        final Authentication newAuthentication;
+        if (isRunAs()) {
+            // The lookup user for run-as currently doesn't have authentication metadata associated with them because
+            // lookupUser only returns the User object. The lookup user for authorization delegation does have
+            // authentication metadata, but the realm does not expose this difference between authenticatingUser and
+            // delegateUser so effectively this is handled together with the authenticatingSubject not effectiveSubject.
+            newAuthentication = new Authentication(
+                new Subject(
+                    effectiveSubject.getUser(),
+                    maybeRewriteRealmRef(olderVersion, effectiveSubject.getRealm()),
+                    olderVersion,
+                    effectiveSubject.getMetadata()
+                ),
+                new Subject(
+                    authenticatingSubject.getUser(),
+                    maybeRewriteRealmRef(olderVersion, authenticatingSubject.getRealm()),
+                    olderVersion,
+                    newMetadata
+                ),
+                type
+            );
+        } else {
+            newAuthentication = new Authentication(
+                new Subject(
+                    authenticatingSubject.getUser(),
+                    maybeRewriteRealmRef(olderVersion, authenticatingSubject.getRealm()),
+                    olderVersion,
+                    newMetadata
+                ),
+                type
+            );
+
         }
         return newAuthentication;
+    }
+
+    private static Map<String, Object> maybeRewriteMetadata(TransportVersion olderVersion, Authentication authentication) {
+        if (authentication.isAuthenticatedAsApiKey()) {
+            return maybeRewriteMetadataForApiKeyRoleDescriptors(olderVersion, authentication);
+        } else if (authentication.isCrossClusterAccess()) {
+            return maybeRewriteMetadataForCrossClusterAccessAuthentication(olderVersion, authentication);
+        } else {
+            return authentication.getAuthenticatingSubject().getMetadata();
+        }
+    }
+
+    /**
+     * Creates a copy of this Authentication instance, but only with metadata entries specified by `fieldsToKeep`.
+     * All other entries are removed from the copy's metadata.
+     */
+    public Authentication copyWithFilteredMetadataFields(final Set<String> fieldsToKeep) {
+        Objects.requireNonNull(fieldsToKeep);
+        if (fieldsToKeep.isEmpty()) {
+            return copyWithEmptyMetadata();
+        }
+        final Map<String, Object> metadataCopy = new HashMap<>(authenticatingSubject.getMetadata());
+        final boolean metadataChanged = metadataCopy.keySet().retainAll(fieldsToKeep);
+        if (logger.isTraceEnabled() && metadataChanged) {
+            logger.trace(
+                "Authentication metadata [{}] for subject [{}] contains fields other than [{}]. These will be removed in the copy.",
+                authenticatingSubject.getMetadata().keySet(),
+                authenticatingSubject.getUser().principal(),
+                fieldsToKeep
+            );
+        }
+        return copyWithMetadata(Collections.unmodifiableMap(metadataCopy));
+    }
+
+    public Authentication copyWithEmptyMetadata() {
+        if (logger.isTraceEnabled() && false == authenticatingSubject.getMetadata().isEmpty()) {
+            logger.trace(
+                "Authentication metadata [{}] for subject [{}] is not empty. All fields will be removed in the copy.",
+                authenticatingSubject.getMetadata().keySet(),
+                authenticatingSubject.getUser().principal()
+            );
+        }
+        return copyWithMetadata(Collections.emptyMap());
+    }
+
+    private Authentication copyWithMetadata(final Map<String, Object> newMetadata) {
+        Objects.requireNonNull(newMetadata);
+        return isRunAs()
+            ? new Authentication(
+                effectiveSubject,
+                new Subject(
+                    authenticatingSubject.getUser(),
+                    authenticatingSubject.getRealm(),
+                    authenticatingSubject.getTransportVersion(),
+                    newMetadata
+                ),
+                type
+            )
+            : new Authentication(
+                new Subject(
+                    authenticatingSubject.getUser(),
+                    authenticatingSubject.getRealm(),
+                    authenticatingSubject.getTransportVersion(),
+                    newMetadata
+                ),
+                type
+            );
     }
 
     /**
      * Returns a new {@code Authentication} that reflects a "run as another user" action under the current {@code Authentication}.
      * The security {@code RealmRef#Domain} of the resulting {@code Authentication} is that of the run-as user's realm.
+     *
+     * @param runAs The user to be impersonated
+     * @param lookupRealmRef The realm where the impersonated user is looked up from. It can be null if the user does
+     *                       not exist. The null lookup realm is used to indicate the lookup failure which will be rejected
+     *                       at authorization time.
      */
     public Authentication runAs(User runAs, @Nullable RealmRef lookupRealmRef) {
         assert supportsRunAs(null);
-        assert false == runAs instanceof RunAsUser;
         assert false == runAs instanceof AnonymousUser;
         assert false == hasSyntheticRealmNameOrType(lookupRealmRef) : "should not use synthetic realm name/type for lookup realms";
 
         Objects.requireNonNull(runAs);
         return new Authentication(
-            new RunAsUser(runAs, getUser()),
-            getAuthenticatedBy(),
-            lookupRealmRef,
-            getVersion(),
-            getAuthenticationType(),
-            getMetadata()
+            new Subject(runAs, lookupRealmRef, getEffectiveSubject().getTransportVersion(), Map.of()),
+            authenticatingSubject,
+            type
         );
     }
 
@@ -262,16 +360,10 @@ public final class Authentication implements ToXContentObject {
      * authenticating using the token credential.
      */
     public Authentication token() {
+        assert false == isAuthenticatedInternally();
         assert false == isServiceAccount();
-        final Authentication newTokenAuthentication = new Authentication(
-            getUser(),
-            getAuthenticatedBy(),
-            getLookedUpBy(),
-            getVersion(),
-            AuthenticationType.TOKEN,
-            getMetadata()
-        );
-        assert Objects.equals(getDomain(), newTokenAuthentication.getDomain());
+        assert false == isCrossClusterAccess();
+        final Authentication newTokenAuthentication = new Authentication(effectiveSubject, authenticatingSubject, AuthenticationType.TOKEN);
         return newTokenAuthentication;
     }
 
@@ -292,9 +384,10 @@ public final class Authentication implements ToXContentObject {
     public Authentication maybeAddAnonymousRoles(@Nullable AnonymousUser anonymousUser) {
         final boolean shouldAddAnonymousRoleNames = anonymousUser != null
             && anonymousUser.enabled()
-            && false == anonymousUser.equals(getUser())
-            && false == User.isInternal(getUser())
+            && false == anonymousUser.equals(getEffectiveSubject().getUser())
+            && false == getEffectiveSubject().getUser() instanceof InternalUser
             && false == isApiKey()
+            && false == isCrossClusterAccess()
             && false == isServiceAccount();
 
         if (false == shouldAddAnonymousRoleNames) {
@@ -305,43 +398,44 @@ public final class Authentication implements ToXContentObject {
         if (anonymousUser.roles().length == 0) {
             throw new IllegalStateException("anonymous is only enabled when the anonymous user has roles");
         }
-        final String[] allRoleNames = ArrayUtils.concat(getUser().roles(), anonymousUser.roles());
+        final String[] allRoleNames = ArrayUtils.concat(getEffectiveSubject().getUser().roles(), anonymousUser.roles());
 
-        final User user;
-        if (getUser()instanceof RunAsUser runAsUser) {
-            user = new RunAsUser(
-                new User(
-                    runAsUser.principal(),
-                    allRoleNames,
-                    runAsUser.fullName(),
-                    runAsUser.email(),
-                    runAsUser.metadata(),
-                    runAsUser.enabled()
+        if (isRunAs()) {
+            final User user = effectiveSubject.getUser();
+            return new Authentication(
+                new Subject(
+                    new User(user.principal(), allRoleNames, user.fullName(), user.email(), user.metadata(), user.enabled()),
+                    effectiveSubject.getRealm(),
+                    effectiveSubject.getTransportVersion(),
+                    effectiveSubject.getMetadata()
                 ),
-                runAsUser.authenticatingUser
+                authenticatingSubject,
+                type
             );
+
         } else {
-            user = new User(
-                getUser().principal(),
-                allRoleNames,
-                getUser().fullName(),
-                getUser().email(),
-                getUser().metadata(),
-                getUser().enabled()
+            final User user = authenticatingSubject.getUser();
+            return new Authentication(
+                new Subject(
+                    new User(user.principal(), allRoleNames, user.fullName(), user.email(), user.metadata(), user.enabled()),
+                    authenticatingSubject.getRealm(),
+                    authenticatingSubject.getTransportVersion(),
+                    authenticatingSubject.getMetadata()
+                ),
+                type
             );
         }
-
-        return new Authentication(user, getAuthenticatedBy(), getLookedUpBy(), getVersion(), getAuthenticationType(), getMetadata());
     }
 
+    // Package private for tests
     /**
      * Returns {@code true} if the effective user belongs to a realm under a domain.
-     * See also {@link #getDomain()} and {@link #getSourceRealm()}.
      */
-    public boolean isAssignedToDomain() {
+    boolean isAssignedToDomain() {
         return getDomain() != null;
     }
 
+    // Package private for tests
     /**
      * Returns the {@link RealmDomain} that the effective user belongs to.
      * A user belongs to a realm which in turn belongs to a domain.
@@ -349,12 +443,12 @@ public final class Authentication implements ToXContentObject {
      * The same username can be authenticated by different realms (e.g. with different credential types),
      * but resources created across realms cannot be accessed unless the realms are also part of the same domain.
      */
-    public @Nullable RealmDomain getDomain() {
-        return getSourceRealm().getDomain();
-    }
-
-    public boolean isAuthenticatedWithServiceAccount() {
-        return ServiceAccountSettings.REALM_TYPE.equals(getAuthenticatedBy().getType());
+    @Nullable
+    RealmDomain getDomain() {
+        if (isFailedRunAs()) {
+            return null;
+        }
+        return getEffectiveSubject().getRealm().getDomain();
     }
 
     /**
@@ -388,6 +482,10 @@ public final class Authentication implements ToXContentObject {
         return effectiveSubject.getType() == Subject.Type.API_KEY;
     }
 
+    public boolean isCrossClusterAccess() {
+        return effectiveSubject.getType() == Subject.Type.CROSS_CLUSTER_ACCESS;
+    }
+
     /**
      * Whether the authentication can run-as another user
      */
@@ -396,16 +494,21 @@ public final class Authentication implements ToXContentObject {
         if (isRunAs()) {
             return false;
         }
-        assert false == getUser() instanceof RunAsUser;
 
         // We may allow service account to run-as in the future, but for now no service account requires it
         if (isServiceAccount()) {
             return false;
         }
 
+        // Real run-as for cross cluster access could happen on the querying cluster side, but not on the fulfilling cluster. Since the
+        // authentication instance corresponds to the fulfilling-cluster-side view, run-as is not supported
+        if (isCrossClusterAccess()) {
+            return false;
+        }
+
         // There is no reason for internal users to run-as. This check prevents either internal user itself
         // or a token created for it (though no such thing in current code) to run-as.
-        if (User.isInternal(getUser())) {
+        if (getEffectiveSubject().getUser() instanceof InternalUser) {
             return false;
         }
 
@@ -421,7 +524,7 @@ public final class Authentication implements ToXContentObject {
         // Also, if anonymous access is disabled or anonymous username, roles are changed after the token is created.
         // Should we still consider the token being created by an anonymous user which is now different from the new
         // anonymous user?
-        if (getUser().equals(anonymousUser)) {
+        if (getEffectiveSubject().getUser().equals(anonymousUser)) {
             assert ANONYMOUS_REALM_TYPE.equals(getAuthenticatingSubject().getRealm().getType())
                 && ANONYMOUS_REALM_NAME.equals(getAuthenticatingSubject().getRealm().getName());
             return false;
@@ -446,24 +549,73 @@ public final class Authentication implements ToXContentObject {
     }
 
     public String encode() throws IOException {
+        return doEncode(effectiveSubject, authenticatingSubject, type);
+    }
+
+    // Package private for testing
+    static String doEncode(Subject effectiveSubject, Subject authenticatingSubject, AuthenticationType type) throws IOException {
         BytesStreamOutput output = new BytesStreamOutput();
-        output.setVersion(version);
-        Version.writeVersion(version, output);
-        writeTo(output);
+        output.setTransportVersion(effectiveSubject.getTransportVersion());
+        TransportVersion.writeVersion(effectiveSubject.getTransportVersion(), output);
+        doWriteTo(effectiveSubject, authenticatingSubject, type, output);
         return Base64.getEncoder().encodeToString(BytesReference.toBytes(output.bytes()));
     }
 
     public void writeTo(StreamOutput out) throws IOException {
-        AuthenticationSerializationHelper.writeUserTo(user, out);
-        authenticatedBy.writeTo(out);
+        doWriteTo(effectiveSubject, authenticatingSubject, type, out);
+    }
+
+    private static void doWriteTo(Subject effectiveSubject, Subject authenticatingSubject, AuthenticationType type, StreamOutput out)
+        throws IOException {
+        // cross cluster access introduced a new synthetic realm and subject type; these cannot be parsed by older versions, so rewriting we
+        // should not send them across the wire to older nodes
+        final boolean isCrossClusterAccess = effectiveSubject.getType() == Subject.Type.CROSS_CLUSTER_ACCESS;
+        if (isCrossClusterAccess && out.getTransportVersion().before(TRANSPORT_VERSION_ADVANCED_REMOTE_CLUSTER_SECURITY_CCS)) {
+            throw new IllegalArgumentException(
+                "versions of Elasticsearch before ["
+                    + TRANSPORT_VERSION_ADVANCED_REMOTE_CLUSTER_SECURITY_CCS
+                    + "] can't handle cross cluster access authentication and attempted to send to ["
+                    + out.getTransportVersion()
+                    + "]"
+            );
+        }
+        final boolean isRunAs = authenticatingSubject != effectiveSubject;
+        if (isRunAs) {
+            final User outerUser = effectiveSubject.getUser();
+            final User innerUser = authenticatingSubject.getUser();
+            assert false == outerUser instanceof InternalUser && false == innerUser instanceof InternalUser
+                : "internal users cannot participate in run-as (outer=[" + outerUser + "] inner=[" + innerUser + "])";
+            User.writeUser(outerUser, out);
+            out.writeBoolean(true);
+            User.writeUser(innerUser, out);
+            out.writeBoolean(false);
+        } else {
+            final User user = effectiveSubject.getUser();
+            AuthenticationSerializationHelper.writeUserTo(user, out);
+        }
+        authenticatingSubject.getRealm().writeTo(out);
+        final RealmRef lookedUpBy = isRunAs ? effectiveSubject.getRealm() : null;
+
         if (lookedUpBy != null) {
             out.writeBoolean(true);
             lookedUpBy.writeTo(out);
         } else {
             out.writeBoolean(false);
         }
-        out.writeVInt(type.ordinal());
-        out.writeGenericMap(metadata);
+        final Map<String, Object> metadata = authenticatingSubject.getMetadata();
+        if (out.getTransportVersion().onOrAfter(VERSION_AUTHENTICATION_TYPE)) {
+            out.writeVInt(type.ordinal());
+            writeMetadata(out, metadata);
+        } else {
+            assert type == AuthenticationType.REALM && metadata.isEmpty()
+                : Strings.format(
+                    "authentication with version [%s] must have authentication type %s and empty metadata, but got [%s] and [%s]",
+                    out.getTransportVersion(),
+                    AuthenticationType.REALM,
+                    type,
+                    metadata
+                );
+        }
     }
 
     /**
@@ -501,17 +653,14 @@ public final class Authentication implements ToXContentObject {
         if (this == o) return true;
         if (o == null || getClass() != o.getClass()) return false;
         Authentication that = (Authentication) o;
-        return user.equals(that.user)
-            && authenticatedBy.equals(that.authenticatedBy)
-            && Objects.equals(lookedUpBy, that.lookedUpBy)
-            && version.equals(that.version)
-            && type == that.type
-            && metadata.equals(that.metadata);
+        return type == that.type
+            && authenticatingSubject.equals(that.authenticatingSubject)
+            && effectiveSubject.equals(that.effectiveSubject);
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(user, authenticatedBy, lookedUpBy, version, type, metadata);
+        return Objects.hash(type, authenticatingSubject, effectiveSubject);
     }
 
     @Override
@@ -525,14 +674,15 @@ public final class Authentication implements ToXContentObject {
      * Generates XContent without the start/end object.
      */
     public void toXContentFragment(XContentBuilder builder) throws IOException {
+        final User user = effectiveSubject.getUser();
         builder.field(User.Fields.USERNAME.getPreferredName(), user.principal());
         builder.array(User.Fields.ROLES.getPreferredName(), user.roles());
         builder.field(User.Fields.FULL_NAME.getPreferredName(), user.fullName());
         builder.field(User.Fields.EMAIL.getPreferredName(), user.email());
         if (isServiceAccount()) {
-            final String tokenName = (String) getMetadata().get(ServiceAccountSettings.TOKEN_NAME_FIELD);
+            final String tokenName = (String) getAuthenticatingSubject().getMetadata().get(ServiceAccountSettings.TOKEN_NAME_FIELD);
             assert tokenName != null : "token name cannot be null";
-            final String tokenSource = (String) getMetadata().get(ServiceAccountSettings.TOKEN_SOURCE_FIELD);
+            final String tokenSource = (String) getAuthenticatingSubject().getMetadata().get(ServiceAccountSettings.TOKEN_SOURCE_FIELD);
             assert tokenSource != null : "token source cannot be null";
             builder.field(
                 User.Fields.TOKEN.getPreferredName(),
@@ -542,34 +692,34 @@ public final class Authentication implements ToXContentObject {
         builder.field(User.Fields.METADATA.getPreferredName(), user.metadata());
         builder.field(User.Fields.ENABLED.getPreferredName(), user.enabled());
         builder.startObject(User.Fields.AUTHENTICATION_REALM.getPreferredName());
-        builder.field(User.Fields.REALM_NAME.getPreferredName(), getAuthenticatedBy().getName());
-        builder.field(User.Fields.REALM_TYPE.getPreferredName(), getAuthenticatedBy().getType());
+        builder.field(User.Fields.REALM_NAME.getPreferredName(), getAuthenticatingSubject().getRealm().getName());
+        builder.field(User.Fields.REALM_TYPE.getPreferredName(), getAuthenticatingSubject().getRealm().getType());
         // domain name is generally ambiguous, because it can change during the lifetime of the authentication,
         // but it is good enough for display purposes (including auditing)
-        if (getAuthenticatedBy().getDomain() != null) {
-            builder.field(User.Fields.REALM_DOMAIN.getPreferredName(), getAuthenticatedBy().getDomain().name());
+        if (getAuthenticatingSubject().getRealm().getDomain() != null) {
+            builder.field(User.Fields.REALM_DOMAIN.getPreferredName(), getAuthenticatingSubject().getRealm().getDomain().name());
         }
         builder.endObject();
         builder.startObject(User.Fields.LOOKUP_REALM.getPreferredName());
-        if (getLookedUpBy() != null) {
-            builder.field(User.Fields.REALM_NAME.getPreferredName(), getLookedUpBy().getName());
-            builder.field(User.Fields.REALM_TYPE.getPreferredName(), getLookedUpBy().getType());
-            if (getLookedUpBy().getDomain() != null) {
-                builder.field(User.Fields.REALM_DOMAIN.getPreferredName(), getLookedUpBy().getDomain().name());
+        final RealmRef lookedUpBy = isRunAs() ? getEffectiveSubject().getRealm() : null;
+        if (lookedUpBy != null) {
+            builder.field(User.Fields.REALM_NAME.getPreferredName(), lookedUpBy.getName());
+            builder.field(User.Fields.REALM_TYPE.getPreferredName(), lookedUpBy.getType());
+            if (lookedUpBy.getDomain() != null) {
+                builder.field(User.Fields.REALM_DOMAIN.getPreferredName(), lookedUpBy.getDomain().name());
             }
         } else {
-            builder.field(User.Fields.REALM_NAME.getPreferredName(), getAuthenticatedBy().getName());
-            builder.field(User.Fields.REALM_TYPE.getPreferredName(), getAuthenticatedBy().getType());
-            if (getAuthenticatedBy().getDomain() != null) {
-                builder.field(User.Fields.REALM_DOMAIN.getPreferredName(), getAuthenticatedBy().getDomain().name());
+            builder.field(User.Fields.REALM_NAME.getPreferredName(), getAuthenticatingSubject().getRealm().getName());
+            builder.field(User.Fields.REALM_TYPE.getPreferredName(), getAuthenticatingSubject().getRealm().getType());
+            if (getAuthenticatingSubject().getRealm().getDomain() != null) {
+                builder.field(User.Fields.REALM_DOMAIN.getPreferredName(), getAuthenticatingSubject().getRealm().getDomain().name());
             }
         }
         builder.endObject();
         builder.field(User.Fields.AUTHENTICATION_TYPE.getPreferredName(), getAuthenticationType().name().toLowerCase(Locale.ROOT));
-        if (isApiKey()) {
-            this.assertApiKeyMetadata();
-            final String apiKeyId = (String) this.metadata.get(AuthenticationField.API_KEY_ID_KEY);
-            final String apiKeyName = (String) this.metadata.get(AuthenticationField.API_KEY_NAME_KEY);
+        if (isApiKey() || isCrossClusterAccess()) {
+            final String apiKeyId = (String) getAuthenticatingSubject().getMetadata().get(AuthenticationField.API_KEY_ID_KEY);
+            final String apiKeyName = (String) getAuthenticatingSubject().getMetadata().get(AuthenticationField.API_KEY_NAME_KEY);
             if (apiKeyName == null) {
                 builder.field("api_key", Map.of("id", apiKeyId));
             } else {
@@ -578,32 +728,269 @@ public final class Authentication implements ToXContentObject {
         }
     }
 
-    private void assertApiKeyMetadata() {
-        assert (false == isAuthenticatedAsApiKey()) || (this.metadata.get(AuthenticationField.API_KEY_ID_KEY) != null)
-            : "API KEY authentication requires metadata to contain API KEY id, and the value must be non-null.";
+    public static Authentication getAuthenticationFromCrossClusterAccessMetadata(Authentication authentication) {
+        if (authentication.isCrossClusterAccess()) {
+            return (Authentication) authentication.getAuthenticatingSubject().getMetadata().get(CROSS_CLUSTER_ACCESS_AUTHENTICATION_KEY);
+        } else {
+            String message = "authentication is not cross_cluster_access";
+            assert false : message;
+            throw new IllegalArgumentException(message);
+        }
     }
 
-    private void assertDomainAssignment() {
-        if (Assertions.ENABLED) {
-            if (isAssignedToDomain()) {
-                assert false == isApiKey();
-                assert false == isServiceAccount();
-                assert false == isAuthenticatedAnonymously();
-                assert false == isAuthenticatedInternally();
+    private static final Map<String, CheckedFunction<StreamInput, Object, IOException>> METADATA_VALUE_READER = Map.of(
+        CROSS_CLUSTER_ACCESS_AUTHENTICATION_KEY,
+        Authentication::new,
+        CROSS_CLUSTER_ACCESS_ROLE_DESCRIPTORS_KEY,
+        in -> in.readList(RoleDescriptorsBytes::new)
+    );
+
+    private static Map<String, Object> readMetadata(StreamInput in) throws IOException {
+        if (in.getTransportVersion().onOrAfter(VERSION_METADATA_BEYOND_GENERIC_MAP)) {
+            final int size = in.readVInt();
+            final Map<String, Object> metadata = Maps.newHashMapWithExpectedSize(size);
+            for (int i = 0; i < size; i++) {
+                final String key = in.readString();
+                final Object value = METADATA_VALUE_READER.getOrDefault(key, StreamInput::readGenericValue).apply(in);
+                metadata.put(key, value);
+            }
+            return metadata;
+        } else {
+            return in.readMap();
+        }
+    }
+
+    private static final Map<String, Writeable.Writer<?>> METADATA_VALUE_WRITER = Map.of(
+        CROSS_CLUSTER_ACCESS_AUTHENTICATION_KEY,
+        (out, v) -> ((Authentication) v).writeTo(out),
+        CROSS_CLUSTER_ACCESS_ROLE_DESCRIPTORS_KEY,
+        (out, v) -> {
+            @SuppressWarnings("unchecked")
+            final List<RoleDescriptorsBytes> roleDescriptorsBytesList = (List<RoleDescriptorsBytes>) v;
+            out.writeCollection(roleDescriptorsBytesList, (o, rdb) -> rdb.writeTo(o));
+        }
+    );
+
+    private static void writeMetadata(StreamOutput out, Map<String, Object> metadata) throws IOException {
+        if (out.getTransportVersion().onOrAfter(VERSION_METADATA_BEYOND_GENERIC_MAP)) {
+            out.writeVInt(metadata.size());
+            for (Map.Entry<String, Object> entry : metadata.entrySet()) {
+                out.writeString(entry.getKey());
+                @SuppressWarnings("unchecked")
+                final var valueWriter = (Writeable.Writer<Object>) METADATA_VALUE_WRITER.getOrDefault(
+                    entry.getKey(),
+                    StreamOutput::writeGenericValue
+                );
+                valueWriter.write(out, entry.getValue());
+            }
+        } else {
+            out.writeGenericMap(metadata);
+        }
+    }
+
+    /**
+     * An Authentication object has internal constraint between its fields, e.g. if it is internal authentication,
+     * it must have an internal user. These logics are upheld when authentication is built as a result of successful
+     * authentication. Hence, this method mostly runs in test (where assertion is enabled).
+     * However, for RCS cross cluster access, FC receives an authentication object as part of the request. There is
+     * no guarantee that this authentication object also maintains the internal logics. Therefore, this method
+     * is called explicitly in production when handling cross cluster access requests.
+     */
+    public void checkConsistency() {
+        // isRunAs logic consistency
+        if (isRunAs()) {
+            assert authenticatingSubject != effectiveSubject : "isRunAs logic does not hold";
+        } else {
+            assert authenticatingSubject == effectiveSubject : "isRunAs logic does not hold";
+        }
+
+        // check consistency for each authentication type
+        switch (getAuthenticationType()) {
+            case ANONYMOUS -> checkConsistencyForAnonymousAuthenticationType();
+            case INTERNAL -> checkConsistencyForInternalAuthenticationType();
+            case API_KEY -> checkConsistencyForApiKeyAuthenticationType();
+            case REALM -> checkConsistencyForRealmAuthenticationType();
+            case TOKEN -> checkConsistencyForTokenAuthenticationType();
+            default -> {
+                assert false : "unknown authentication type " + type;
             }
         }
     }
 
-    private boolean hasSyntheticRealmNameOrType(@Nullable RealmRef realmRef) {
+    private void checkConsistencyForAnonymousAuthenticationType() {
+        final RealmRef authenticatingRealm = authenticatingSubject.getRealm();
+        if (false == authenticatingRealm.isAnonymousRealm()) {
+            throw new IllegalArgumentException(
+                Strings.format("Anonymous authentication cannot have realm type [%s]", authenticatingRealm.type)
+            );
+        }
+        checkNoDomain(authenticatingRealm, "Anonymous");
+        checkNoInternalUser(authenticatingSubject, "Anonymous");
+        checkNoRunAs(this, "Anonymous");
+    }
+
+    private void checkConsistencyForInternalAuthenticationType() {
+        final RealmRef authenticatingRealm = authenticatingSubject.getRealm();
+        if (false == authenticatingRealm.isFallbackRealm() && false == authenticatingRealm.isAttachRealm()) {
+            throw new IllegalArgumentException(
+                Strings.format("Internal authentication cannot have realm type [%s]", authenticatingRealm.type)
+            );
+        }
+        checkNoDomain(authenticatingRealm, "Internal");
+        if (false == authenticatingSubject.getUser() instanceof InternalUser) {
+            throw new IllegalArgumentException("Internal authentication must have internal user");
+        }
+        checkNoRunAs(this, "Internal");
+    }
+
+    private void checkConsistencyForApiKeyAuthenticationType() {
+        final RealmRef authenticatingRealm = authenticatingSubject.getRealm();
+        if (false == authenticatingRealm.isApiKeyRealm() && false == authenticatingRealm.isCrossClusterAccessRealm()) {
+            throw new IllegalArgumentException(
+                Strings.format("API key authentication cannot have realm type [%s]", authenticatingRealm.type)
+            );
+        }
+        checkConsistencyForApiKeyAuthenticatingSubject("API key");
+        if (Subject.Type.CROSS_CLUSTER_ACCESS == authenticatingSubject.getType()) {
+            if (authenticatingSubject.getMetadata().get(CROSS_CLUSTER_ACCESS_AUTHENTICATION_KEY) == null) {
+                throw new IllegalArgumentException(
+                    "Cross cluster access authentication requires metadata to contain "
+                        + "a non-null serialized cross cluster access authentication field"
+                );
+            }
+            final Authentication innerAuthentication = (Authentication) authenticatingSubject.getMetadata()
+                .get(CROSS_CLUSTER_ACCESS_AUTHENTICATION_KEY);
+            if (innerAuthentication.isCrossClusterAccess()) {
+                throw new IllegalArgumentException(
+                    "Cross cluster access authentication cannot contain another cross cluster access authentication in its metadata"
+                );
+            }
+            if (authenticatingSubject.getMetadata().get(CROSS_CLUSTER_ACCESS_ROLE_DESCRIPTORS_KEY) == null) {
+                throw new IllegalArgumentException(
+                    "Cross cluster access authentication requires metadata to contain "
+                        + "a non-null serialized cross cluster access role descriptors field"
+                );
+            }
+            checkNoRunAs(this, "Cross cluster access");
+        } else {
+            if (isRunAs()) {
+                checkRunAsConsistency(effectiveSubject, authenticatingSubject);
+            }
+        }
+    }
+
+    private void checkConsistencyForRealmAuthenticationType() {
+        if (Subject.Type.USER != authenticatingSubject.getType()) {
+            throw new IllegalArgumentException("Realm authentication must have subject type of user");
+        }
+        if (isRunAs()) {
+            checkRunAsConsistency(effectiveSubject, authenticatingSubject);
+        }
+    }
+
+    private void checkConsistencyForTokenAuthenticationType() {
+        final RealmRef authenticatingRealm = authenticatingSubject.getRealm();
+        // The below assertion does not hold for custom realms. That's why it is an assertion instead of runtime error.
+        // Custom realms with synthetic realm names are likely fail in other places. But we don't fail in name/type checks
+        // for mostly historical reasons.
+        assert false == authenticatingRealm.isAttachRealm()
+            && false == authenticatingRealm.isFallbackRealm()
+            && false == authenticatingRealm.isCrossClusterAccessRealm()
+            : "Token authentication cannot have authenticating realm " + authenticatingRealm;
+
+        checkNoInternalUser(authenticatingSubject, "Token");
+        if (Subject.Type.SERVICE_ACCOUNT == authenticatingSubject.getType()) {
+            checkNoDomain(authenticatingRealm, "Service account");
+            checkNoRole(authenticatingSubject, "Service account");
+            checkNoRunAs(this, "Service account");
+        } else {
+            if (Subject.Type.API_KEY == authenticatingSubject.getType()) {
+                checkConsistencyForApiKeyAuthenticatingSubject("API key token");
+            }
+            if (isRunAs()) {
+                checkRunAsConsistency(effectiveSubject, authenticatingSubject);
+            }
+        }
+    }
+
+    private static void checkRunAsConsistency(Subject effectiveSubject, Subject authenticatingSubject) {
+        if (false == effectiveSubject.getTransportVersion().equals(authenticatingSubject.getTransportVersion())) {
+            throw new IllegalArgumentException(
+                Strings.format(
+                    "inconsistent versions between effective subject [%s] and authenticating subject [%s]",
+                    effectiveSubject.getTransportVersion(),
+                    authenticatingSubject.getTransportVersion()
+                )
+            );
+        }
+        if (Subject.Type.USER != effectiveSubject.getType()) {
+            throw new IllegalArgumentException(Strings.format("Run-as subject type cannot be [%s]", effectiveSubject.getType()));
+        }
+        if (false == effectiveSubject.getMetadata().isEmpty()) {
+            throw new IllegalArgumentException("Run-as subject must have empty metadata");
+        }
+        // assert here because it does not hold for custom realm
+        assert false == hasSyntheticRealmNameOrType(effectiveSubject.getRealm()) : "run-as subject cannot be from a synthetic realm";
+    }
+
+    private void checkConsistencyForApiKeyAuthenticatingSubject(String prefixMessage) {
+        final RealmRef authenticatingRealm = authenticatingSubject.getRealm();
+        checkNoDomain(authenticatingRealm, prefixMessage);
+        checkNoInternalUser(authenticatingSubject, prefixMessage);
+        checkNoRole(authenticatingSubject, prefixMessage);
+        if (authenticatingSubject.getMetadata().get(AuthenticationField.API_KEY_ID_KEY) == null) {
+            throw new IllegalArgumentException(prefixMessage + " authentication requires metadata to contain a non-null API key ID");
+        }
+    }
+
+    private static void checkNoInternalUser(Subject subject, String prefixMessage) {
+        if (subject.getUser() instanceof InternalUser) {
+            throw new IllegalArgumentException(
+                Strings.format(prefixMessage + " authentication cannot have internal user [%s]", subject.getUser().principal())
+            );
+        }
+    }
+
+    private static void checkNoDomain(RealmRef realm, String prefixMessage) {
+        if (realm.getDomain() != null) {
+            throw new IllegalArgumentException(prefixMessage + " authentication cannot have domain");
+        }
+    }
+
+    private static void checkNoRole(Subject subject, String prefixMessage) {
+        if (subject.getUser().roles().length != 0) {
+            throw new IllegalArgumentException(prefixMessage + " authentication user must have no role");
+        }
+    }
+
+    private static void checkNoRunAs(Authentication authentication, String prefixMessage) {
+        if (authentication.isRunAs()) {
+            throw new IllegalArgumentException(prefixMessage + " authentication cannot run-as other user");
+        }
+    }
+
+    private static boolean hasSyntheticRealmNameOrType(@Nullable RealmRef realmRef) {
         if (realmRef == null) {
             return false;
         }
-        if (List.of(API_KEY_REALM_NAME, ServiceAccountSettings.REALM_NAME, ANONYMOUS_REALM_NAME, FALLBACK_REALM_NAME, ATTACH_REALM_NAME)
-            .contains(realmRef.getName())) {
+        if (List.of(
+            API_KEY_REALM_NAME,
+            ServiceAccountSettings.REALM_NAME,
+            ANONYMOUS_REALM_NAME,
+            FALLBACK_REALM_NAME,
+            ATTACH_REALM_NAME,
+            CROSS_CLUSTER_ACCESS_REALM_NAME
+        ).contains(realmRef.getName())) {
             return true;
         }
-        if (List.of(API_KEY_REALM_TYPE, ServiceAccountSettings.REALM_TYPE, ANONYMOUS_REALM_TYPE, FALLBACK_REALM_TYPE, ATTACH_REALM_TYPE)
-            .contains(realmRef.getType())) {
+        if (List.of(
+            API_KEY_REALM_TYPE,
+            ServiceAccountSettings.REALM_TYPE,
+            ANONYMOUS_REALM_TYPE,
+            FALLBACK_REALM_TYPE,
+            ATTACH_REALM_TYPE,
+            CROSS_CLUSTER_ACCESS_REALM_TYPE
+        ).contains(realmRef.getType())) {
             return true;
         }
         return false;
@@ -611,14 +998,11 @@ public final class Authentication implements ToXContentObject {
 
     @Override
     public String toString() {
-        StringBuilder builder = new StringBuilder("Authentication[").append(user)
-            .append(",type=")
-            .append(type)
-            .append(",by=")
-            .append(authenticatedBy);
-        if (lookedUpBy != null) {
-            builder.append(",lookup=").append(lookedUpBy);
+        StringBuilder builder = new StringBuilder("Authentication[effectiveSubject=").append(effectiveSubject);
+        if (isRunAs()) {
+            builder.append(",authenticatingSubject=").append(authenticatingSubject);
         }
+        builder.append(",type=").append(type);
         builder.append("]");
         return builder.toString();
     }
@@ -645,7 +1029,7 @@ public final class Authentication implements ToXContentObject {
             this.nodeName = in.readString();
             this.name = in.readString();
             this.type = in.readString();
-            if (in.getVersion().onOrAfter(VERSION_REALM_DOMAINS)) {
+            if (in.getTransportVersion().onOrAfter(VERSION_REALM_DOMAINS)) {
                 this.domain = in.readOptionalWriteable(RealmDomain::readFrom);
             } else {
                 this.domain = null;
@@ -657,7 +1041,7 @@ public final class Authentication implements ToXContentObject {
             out.writeString(nodeName);
             out.writeString(name);
             out.writeString(type);
-            if (out.getVersion().onOrAfter(VERSION_REALM_DOMAINS)) {
+            if (out.getTransportVersion().onOrAfter(VERSION_REALM_DOMAINS)) {
                 out.writeOptionalWriteable(domain);
             }
         }
@@ -729,6 +1113,30 @@ public final class Authentication implements ToXContentObject {
             }
         }
 
+        private boolean isFallbackRealm() {
+            return FALLBACK_REALM_NAME.equals(name) && FALLBACK_REALM_TYPE.equals(type);
+        }
+
+        private boolean isAttachRealm() {
+            return ATTACH_REALM_NAME.equals(name) && ATTACH_REALM_TYPE.equals(type);
+        }
+
+        private boolean isAnonymousRealm() {
+            return ANONYMOUS_REALM_NAME.equals(name) && ANONYMOUS_REALM_TYPE.equals(type);
+        }
+
+        private boolean isApiKeyRealm() {
+            return API_KEY_REALM_NAME.equals(name) && API_KEY_REALM_TYPE.equals(type);
+        }
+
+        private boolean isServiceAccountRealm() {
+            return ServiceAccountSettings.REALM_NAME.equals(name) && ServiceAccountSettings.REALM_TYPE.equals(type);
+        }
+
+        private boolean isCrossClusterAccessRealm() {
+            return CROSS_CLUSTER_ACCESS_REALM_NAME.equals(name) && CROSS_CLUSTER_ACCESS_REALM_TYPE.equals(type);
+        }
+
         static RealmRef newInternalAttachRealmRef(String nodeName) {
             // the "attach" internal realm is not part of any realm domain
             return new Authentication.RealmRef(ATTACH_REALM_NAME, ATTACH_REALM_TYPE, nodeName, null);
@@ -740,7 +1148,7 @@ public final class Authentication implements ToXContentObject {
             return realmRef;
         }
 
-        static RealmRef newAnonymousRealmRef(String nodeName) {
+        public static RealmRef newAnonymousRealmRef(String nodeName) {
             // the "anonymous" internal realm is not part of any realm domain
             return new Authentication.RealmRef(ANONYMOUS_REALM_NAME, ANONYMOUS_REALM_TYPE, nodeName, null);
         }
@@ -753,6 +1161,11 @@ public final class Authentication implements ToXContentObject {
         static RealmRef newApiKeyRealmRef(String nodeName) {
             // no domain for API Key tokens
             return new RealmRef(API_KEY_REALM_NAME, API_KEY_REALM_TYPE, nodeName, null);
+        }
+
+        static RealmRef newCrossClusterAccessRealmRef(String nodeName) {
+            // no domain for cross cluster access authentication
+            return new RealmRef(CROSS_CLUSTER_ACCESS_REALM_NAME, CROSS_CLUSTER_ACCESS_REALM_TYPE, nodeName, null);
         }
     }
 
@@ -774,19 +1187,12 @@ public final class Authentication implements ToXContentObject {
     }
 
     // TODO is a newer version than the node's a valid value?
-    public static Authentication newInternalAuthentication(User internalUser, Version version, String nodeName) {
-        // TODO create a system user class, so that the type system guarantees that this is only invoked for internal users
-        assert User.isInternal(internalUser);
+    public static Authentication newInternalAuthentication(InternalUser internalUser, TransportVersion version, String nodeName) {
         final Authentication.RealmRef authenticatedBy = newInternalAttachRealmRef(nodeName);
         Authentication authentication = new Authentication(
-            internalUser,
-            authenticatedBy,
-            null,
-            version,
-            AuthenticationType.INTERNAL,
-            Collections.emptyMap()
+            new Subject(internalUser, authenticatedBy, version, Map.of()),
+            AuthenticationType.INTERNAL
         );
-        assert false == authentication.isAssignedToDomain();
         return authentication;
     }
 
@@ -794,53 +1200,40 @@ public final class Authentication implements ToXContentObject {
         // TODO assert SystemUser.is(fallbackUser);
         final Authentication.RealmRef authenticatedBy = newInternalFallbackRealmRef(nodeName);
         Authentication authentication = new Authentication(
-            fallbackUser,
-            authenticatedBy,
-            null,
-            Version.CURRENT,
-            Authentication.AuthenticationType.INTERNAL,
-            Collections.emptyMap()
+            new Subject(fallbackUser, authenticatedBy, TransportVersion.current(), Map.of()),
+            Authentication.AuthenticationType.INTERNAL
         );
-        assert false == authentication.isAssignedToDomain();
         return authentication;
     }
 
     public static Authentication newAnonymousAuthentication(AnonymousUser anonymousUser, String nodeName) {
         final Authentication.RealmRef authenticatedBy = newAnonymousRealmRef(nodeName);
         Authentication authentication = new Authentication(
-            anonymousUser,
-            authenticatedBy,
-            null,
-            Version.CURRENT,
-            Authentication.AuthenticationType.ANONYMOUS,
-            Collections.emptyMap()
+            new Subject(anonymousUser, authenticatedBy, TransportVersion.current(), Map.of()),
+            Authentication.AuthenticationType.ANONYMOUS
         );
-        assert false == authentication.isAssignedToDomain();
         return authentication;
     }
 
     public static Authentication newServiceAccountAuthentication(User serviceAccountUser, String nodeName, Map<String, Object> metadata) {
         // TODO make the service account user a separate class/interface
-        assert false == serviceAccountUser instanceof RunAsUser;
         final Authentication.RealmRef authenticatedBy = newServiceAccountRealmRef(nodeName);
         Authentication authentication = new Authentication(
-            serviceAccountUser,
-            authenticatedBy,
-            null,
-            Version.CURRENT,
-            AuthenticationType.TOKEN,
-            metadata
+            new Subject(serviceAccountUser, authenticatedBy, TransportVersion.current(), metadata),
+            AuthenticationType.TOKEN
         );
-        assert false == authentication.isAssignedToDomain();
         return authentication;
     }
 
     public static Authentication newRealmAuthentication(User user, RealmRef realmRef) {
         // TODO make the type system ensure that this is not a run-as user
-        assert false == user instanceof RunAsUser;
-        Authentication authentication = new Authentication(user, realmRef, null, Version.CURRENT, AuthenticationType.REALM, Map.of());
+        Authentication authentication = new Authentication(
+            new Subject(user, realmRef, TransportVersion.current(), Map.of()),
+            AuthenticationType.REALM
+        );
         assert false == authentication.isServiceAccount();
         assert false == authentication.isApiKey();
+        assert false == authentication.isCrossClusterAccess();
         assert false == authentication.isAuthenticatedInternally();
         assert false == authentication.isAuthenticatedAnonymously();
         return authentication;
@@ -849,32 +1242,49 @@ public final class Authentication implements ToXContentObject {
     public static Authentication newApiKeyAuthentication(AuthenticationResult<User> authResult, String nodeName) {
         assert authResult.isAuthenticated() : "API Key authn result must be successful";
         final User apiKeyUser = authResult.getValue();
-        assert false == apiKeyUser instanceof RunAsUser;
         assert apiKeyUser.roles().length == 0 : "The user associated to an API key authentication must have no role";
         final Authentication.RealmRef authenticatedBy = newApiKeyRealmRef(nodeName);
         Authentication authentication = new Authentication(
-            apiKeyUser,
-            authenticatedBy,
-            null,
-            Version.CURRENT,
-            AuthenticationType.API_KEY,
-            authResult.getMetadata()
+            new Subject(apiKeyUser, authenticatedBy, TransportVersion.current(), authResult.getMetadata()),
+            AuthenticationType.API_KEY
         );
-        assert false == authentication.isAssignedToDomain();
         return authentication;
     }
 
-    private static RealmRef maybeRewriteRealmRef(Version streamVersion, RealmRef realmRef) {
+    public Authentication toCrossClusterAccess(CrossClusterAccessSubjectInfo crossClusterAccessSubjectInfo) {
+        assert isApiKey() : "can only convert API key authentication to cross cluster access";
+        assert false == isRunAs() : "cross cluster access does not support authentication with run-as";
+        assert getEffectiveSubject().getUser().roles().length == 0
+            : "the user associated with a cross cluster access authentication must have no role";
+        final Map<String, Object> metadata = new HashMap<>(getAuthenticatingSubject().getMetadata());
+        final Authentication.RealmRef authenticatedBy = newCrossClusterAccessRealmRef(getAuthenticatingSubject().getRealm().getNodeName());
+        return new Authentication(
+            new Subject(
+                getEffectiveSubject().getUser(),
+                authenticatedBy,
+                TransportVersion.current(),
+                crossClusterAccessSubjectInfo.copyWithCrossClusterAccessEntries(metadata)
+            ),
+            getAuthenticationType()
+        );
+    }
+
+    // pkg-private for testing
+    static RealmRef maybeRewriteRealmRef(TransportVersion streamVersion, RealmRef realmRef) {
         if (realmRef != null && realmRef.getDomain() != null && streamVersion.before(VERSION_REALM_DOMAINS)) {
+            logger.info("Rewriting realm [" + realmRef + "] without domain");
             // security domain erasure
-            new RealmRef(realmRef.getName(), realmRef.getType(), realmRef.getNodeName(), null);
+            return new RealmRef(realmRef.getName(), realmRef.getType(), realmRef.getNodeName(), null);
         }
         return realmRef;
     }
 
     @SuppressWarnings("unchecked")
-    private static Map<String, Object> maybeRewriteMetadataForApiKeyRoleDescriptors(Version streamVersion, Authentication authentication) {
-        Map<String, Object> metadata = authentication.getMetadata();
+    private static Map<String, Object> maybeRewriteMetadataForApiKeyRoleDescriptors(
+        TransportVersion streamVersion,
+        Authentication authentication
+    ) {
+        Map<String, Object> metadata = authentication.getAuthenticatingSubject().getMetadata();
         // If authentication user is an API key or a token created by an API key,
         // regardless whether it has run-as, the metadata must contain API key role descriptors
         if (authentication.isAuthenticatedAsApiKey()) {
@@ -882,7 +1292,23 @@ public final class Authentication implements ToXContentObject {
                 : "metadata must contain role descriptor for API key authentication";
             assert metadata.containsKey(AuthenticationField.API_KEY_LIMITED_ROLE_DESCRIPTORS_KEY)
                 : "metadata must contain limited role descriptor for API key authentication";
-            if (authentication.getVersion().onOrAfter(VERSION_API_KEY_ROLES_AS_BYTES)
+            if (authentication.getEffectiveSubject().getTransportVersion().onOrAfter(TRANSPORT_VERSION_ADVANCED_REMOTE_CLUSTER_SECURITY_CCS)
+                && streamVersion.before(TRANSPORT_VERSION_ADVANCED_REMOTE_CLUSTER_SECURITY_CCS)) {
+                metadata = new HashMap<>(metadata);
+                metadata.put(
+                    AuthenticationField.API_KEY_ROLE_DESCRIPTORS_KEY,
+                    maybeRemoveRemoteIndicesFromRoleDescriptors(
+                        (BytesReference) metadata.get(AuthenticationField.API_KEY_ROLE_DESCRIPTORS_KEY)
+                    )
+                );
+                metadata.put(
+                    AuthenticationField.API_KEY_LIMITED_ROLE_DESCRIPTORS_KEY,
+                    maybeRemoveRemoteIndicesFromRoleDescriptors(
+                        (BytesReference) metadata.get(AuthenticationField.API_KEY_LIMITED_ROLE_DESCRIPTORS_KEY)
+                    )
+                );
+            }
+            if (authentication.getEffectiveSubject().getTransportVersion().onOrAfter(VERSION_API_KEY_ROLES_AS_BYTES)
                 && streamVersion.before(VERSION_API_KEY_ROLES_AS_BYTES)) {
                 metadata = new HashMap<>(metadata);
                 metadata.put(
@@ -895,7 +1321,7 @@ public final class Authentication implements ToXContentObject {
                         (BytesReference) metadata.get(AuthenticationField.API_KEY_LIMITED_ROLE_DESCRIPTORS_KEY)
                     )
                 );
-            } else if (authentication.getVersion().before(VERSION_API_KEY_ROLES_AS_BYTES)
+            } else if (authentication.getEffectiveSubject().getTransportVersion().before(VERSION_API_KEY_ROLES_AS_BYTES)
                 && streamVersion.onOrAfter(VERSION_API_KEY_ROLES_AS_BYTES)) {
                     metadata = new HashMap<>(metadata);
                     metadata.put(
@@ -915,6 +1341,38 @@ public final class Authentication implements ToXContentObject {
         return metadata;
     }
 
+    // pkg-private for testing
+    static Map<String, Object> maybeRewriteMetadataForCrossClusterAccessAuthentication(
+        final TransportVersion olderVersion,
+        final Authentication authentication
+    ) {
+        assert authentication.isCrossClusterAccess() : "authentication must be cross cluster access";
+        final Map<String, Object> metadata = authentication.getAuthenticatingSubject().getMetadata();
+        assert metadata.containsKey(CROSS_CLUSTER_ACCESS_AUTHENTICATION_KEY)
+            : "metadata must contain authentication object for cross cluster access authentication";
+        final Authentication authenticationFromMetadata = (Authentication) metadata.get(CROSS_CLUSTER_ACCESS_AUTHENTICATION_KEY);
+        final TransportVersion effectiveSubjectVersion = authenticationFromMetadata.getEffectiveSubject().getTransportVersion();
+        if (effectiveSubjectVersion.after(olderVersion)) {
+            logger.trace(
+                () -> "Cross cluster access authentication has authentication field in metadata ["
+                    + authenticationFromMetadata
+                    + "] that may require a rewrite from version ["
+                    + effectiveSubjectVersion
+                    + "] to ["
+                    + olderVersion
+                    + "]"
+            );
+            final Map<String, Object> rewrittenMetadata = new HashMap<>(metadata);
+            rewrittenMetadata.put(
+                CROSS_CLUSTER_ACCESS_AUTHENTICATION_KEY,
+                authenticationFromMetadata.maybeRewriteForOlderVersion(olderVersion)
+            );
+            return rewrittenMetadata;
+        } else {
+            return metadata;
+        }
+    }
+
     private static Map<String, Object> convertRoleDescriptorsBytesToMap(BytesReference roleDescriptorsBytes) {
         return XContentHelper.convertToMap(roleDescriptorsBytes, false, XContentType.JSON).v2();
     }
@@ -925,6 +1383,32 @@ public final class Authentication implements ToXContentObject {
             return BytesReference.bytes(builder);
         } catch (IOException e) {
             throw new UncheckedIOException(e);
+        }
+    }
+
+    static BytesReference maybeRemoveRemoteIndicesFromRoleDescriptors(BytesReference roleDescriptorsBytes) {
+        if (roleDescriptorsBytes == null || roleDescriptorsBytes.length() == 0) {
+            return roleDescriptorsBytes;
+        }
+
+        final Map<String, Object> roleDescriptorsMap = convertRoleDescriptorsBytesToMap(roleDescriptorsBytes);
+        final AtomicBoolean removedAtLeastOne = new AtomicBoolean(false);
+        roleDescriptorsMap.forEach((key, value) -> {
+            if (value instanceof Map) {
+                @SuppressWarnings("unchecked")
+                Map<String, Object> roleDescriptor = (Map<String, Object>) value;
+                boolean removed = roleDescriptor.remove(RoleDescriptor.Fields.REMOTE_INDICES.getPreferredName()) != null;
+                if (removed) {
+                    removedAtLeastOne.set(true);
+                }
+            }
+        });
+
+        if (removedAtLeastOne.get()) {
+            return convertRoleDescriptorsMapToBytes(roleDescriptorsMap);
+        } else {
+            // No need to serialize if we did not remove anything.
+            return roleDescriptorsBytes;
         }
     }
 
@@ -950,126 +1434,52 @@ public final class Authentication implements ToXContentObject {
         INTERNAL
     }
 
-    // Package private for testing
-    static class RunAsUser extends User {
-        final User authenticatingUser;
-
-        RunAsUser(User effectiveUser, User authenticatingUser) {
-            super(
-                effectiveUser.principal(),
-                effectiveUser.roles(),
-                effectiveUser.fullName(),
-                effectiveUser.email(),
-                effectiveUser.metadata(),
-                effectiveUser.enabled()
-            );
-            this.authenticatingUser = Objects.requireNonNull(authenticatingUser);
-        }
-
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) return true;
-            if (o == null || getClass() != o.getClass()) return false;
-            if (false == super.equals(o)) return false;
-            RunAsUser runAsUser = (RunAsUser) o;
-            return authenticatingUser.equals(runAsUser.authenticatingUser);
-        }
-
-        @Override
-        public int hashCode() {
-            return Objects.hash(super.hashCode(), authenticatingUser);
-        }
-
-        @Override
-        public String toString() {
-            StringBuilder sb = new StringBuilder();
-            sb.append("RunAsUser[username=").append(principal());
-            sb.append(",roles=[").append(Strings.arrayToCommaDelimitedString(roles())).append("]");
-            sb.append(",fullName=").append(fullName());
-            sb.append(",email=").append(email());
-            sb.append(",metadata=");
-            sb.append(metadata());
-            if (enabled() == false) {
-                sb.append(",(disabled)");
-            }
-            sb.append(",authenticatingUser=[").append(authenticatingUser.toString()).append("]");
-            sb.append("]");
-            return sb.toString();
-        }
-    }
-
     public static class AuthenticationSerializationHelper {
 
         private AuthenticationSerializationHelper() {}
 
+        /**
+         * Read the User object as well as the trailing boolean flag if the user is *not* an internal user.
+         * The trailing boolean, if exits, must be false (indicating no following inner-user).
+         */
         public static User readUserFrom(StreamInput input) throws IOException {
-            final boolean isInternalUser = input.readBoolean();
-            final String username = input.readString();
-            if (isInternalUser) {
-                if (SystemUser.NAME.equals(username)) {
-                    return SystemUser.INSTANCE;
-                } else if (XPackUser.NAME.equals(username)) {
-                    return XPackUser.INSTANCE;
-                } else if (XPackSecurityUser.NAME.equals(username)) {
-                    return XPackSecurityUser.INSTANCE;
-                } else if (SecurityProfileUser.NAME.equals(username)) {
-                    return SecurityProfileUser.INSTANCE;
-                } else if (AsyncSearchUser.NAME.equals(username)) {
-                    return AsyncSearchUser.INSTANCE;
+            final User user = readUserWithoutTrailingBoolean(input);
+            if (false == user instanceof InternalUser) {
+                boolean hasInnerUser = input.readBoolean();
+                assert false == hasInnerUser : "inner user is not allowed";
+                if (hasInnerUser) {
+                    throw new IllegalStateException("inner user is not allowed");
                 }
-                throw new IllegalStateException("username [" + username + "] does not match any internal user");
             }
-            return partialReadUserFrom(username, input);
+            return user;
         }
 
         public static void writeUserTo(User user, StreamOutput output) throws IOException {
-            if (SystemUser.is(user)) {
-                output.writeBoolean(true);
-                output.writeString(SystemUser.NAME);
-            } else if (XPackUser.is(user)) {
-                output.writeBoolean(true);
-                output.writeString(XPackUser.NAME);
-            } else if (XPackSecurityUser.is(user)) {
-                output.writeBoolean(true);
-                output.writeString(XPackSecurityUser.NAME);
-            } else if (SecurityProfileUser.is(user)) {
-                output.writeBoolean(true);
-                output.writeString(SecurityProfileUser.NAME);
-            } else if (AsyncSearchUser.is(user)) {
-                output.writeBoolean(true);
-                output.writeString(AsyncSearchUser.NAME);
+            if (user instanceof InternalUser internal) {
+                writeInternalUser(internal, output);
             } else {
-                doWriteUserTo(user, output);
+                User.writeUser(user, output);
+                output.writeBoolean(false); // simple user, no inner user possible
             }
         }
 
-        private static User partialReadUserFrom(String username, StreamInput input) throws IOException {
+        private static User readUserWithoutTrailingBoolean(StreamInput input) throws IOException {
+            final boolean isInternalUser = input.readBoolean();
+            final String username = input.readString();
+            if (isInternalUser) {
+                return InternalUsers.getUser(username);
+            }
             String[] roles = input.readStringArray();
             Map<String, Object> metadata = input.readMap();
             String fullName = input.readOptionalString();
             String email = input.readOptionalString();
             boolean enabled = input.readBoolean();
-            User outerUser = new User(username, roles, fullName, email, metadata, enabled);
-            boolean hasInnerUser = input.readBoolean();
-            if (hasInnerUser) {
-                User innerUser = readUserFrom(input);
-                assert false == User.isInternal(innerUser) : "authenticating user cannot be internal";
-                return new RunAsUser(outerUser, innerUser);
-            } else {
-                return outerUser;
-            }
+            return new User(username, roles, fullName, email, metadata, enabled);
         }
 
-        private static void doWriteUserTo(User user, StreamOutput output) throws IOException {
-            if (user instanceof RunAsUser runAsUser) {
-                User.writeUser(user, output);
-                output.writeBoolean(true);
-                User.writeUser(runAsUser.authenticatingUser, output);
-            } else {
-                // no backcompat necessary, since there is no inner user
-                User.writeUser(user, output);
-            }
-            output.writeBoolean(false); // last user written, regardless of bwc, does not have an inner user
+        private static void writeInternalUser(InternalUser user, StreamOutput output) throws IOException {
+            output.writeBoolean(true);
+            output.writeString(user.principal());
         }
     }
 }
