@@ -9,11 +9,11 @@ package org.elasticsearch.xpack.security;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.support.ActionFilters;
 import org.elasticsearch.action.support.PlainActionFuture;
-import org.elasticsearch.common.collect.MapBuilder;
 import org.elasticsearch.common.io.stream.BytesStreamOutput;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.license.MockLicenseState;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.transport.TcpTransport;
 import org.elasticsearch.transport.TransportService;
 import org.elasticsearch.xcontent.ToXContent;
 import org.elasticsearch.xcontent.XContentBuilder;
@@ -26,9 +26,11 @@ import org.elasticsearch.xpack.core.security.SecurityFeatureSetUsage;
 import org.elasticsearch.xpack.core.security.user.AnonymousUser;
 import org.elasticsearch.xpack.core.watcher.support.xcontent.XContentSource;
 import org.elasticsearch.xpack.security.audit.logfile.LoggingAuditTrail;
+import org.elasticsearch.xpack.security.authc.ApiKeyService;
 import org.elasticsearch.xpack.security.authc.Realms;
 import org.elasticsearch.xpack.security.authc.support.mapper.NativeRoleMappingStore;
 import org.elasticsearch.xpack.security.authz.store.CompositeRolesStore;
+import org.elasticsearch.xpack.security.profile.ProfileService;
 import org.elasticsearch.xpack.security.transport.filter.IPFilter;
 import org.junit.Before;
 
@@ -39,7 +41,9 @@ import java.util.HashMap;
 import java.util.Map;
 
 import static org.elasticsearch.test.ActionListenerUtils.anyActionListener;
+import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.nullValue;
+import static org.hamcrest.Matchers.anEmptyMap;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.emptyIterable;
 import static org.hamcrest.Matchers.notNullValue;
@@ -56,7 +60,9 @@ public class SecurityInfoTransportActionTests extends ESTestCase {
     private IPFilter ipFilter;
     private CompositeRolesStore rolesStore;
     private NativeRoleMappingStore roleMappingStore;
+    private ProfileService profileService;
     private SecurityUsageServices securityServices;
+    private ApiKeyService apiKeyService;
 
     @Before
     public void init() throws Exception {
@@ -66,7 +72,9 @@ public class SecurityInfoTransportActionTests extends ESTestCase {
         ipFilter = mock(IPFilter.class);
         rolesStore = mock(CompositeRolesStore.class);
         roleMappingStore = mock(NativeRoleMappingStore.class);
-        securityServices = new SecurityUsageServices(realms, rolesStore, roleMappingStore, ipFilter);
+        profileService = mock(ProfileService.class);
+        apiKeyService = mock(ApiKeyService.class);
+        securityServices = new SecurityUsageServices(realms, rolesStore, roleMappingStore, ipFilter, profileService, apiKeyService);
     }
 
     public void testAvailable() {
@@ -97,6 +105,8 @@ public class SecurityInfoTransportActionTests extends ESTestCase {
         final boolean enabled = explicitlyDisabled == false;
         final boolean operatorPrivilegesAvailable = randomBoolean();
         when(licenseState.isAllowed(Security.OPERATOR_PRIVILEGES_FEATURE)).thenReturn(operatorPrivilegesAvailable);
+        final boolean remoteClusterServerAvailable = randomBoolean();
+        when(licenseState.isAllowed(Security.ADVANCED_REMOTE_CLUSTER_SECURITY_FEATURE)).thenReturn(remoteClusterServerAvailable);
 
         Settings.Builder settings = Settings.builder().put(this.settings);
 
@@ -107,6 +117,14 @@ public class SecurityInfoTransportActionTests extends ESTestCase {
         settings.put("xpack.security.http.ssl.enabled", httpSSLEnabled);
         final boolean transportSSLEnabled = randomBoolean();
         settings.put("xpack.security.transport.ssl.enabled", transportSSLEnabled);
+
+        // Remote cluster server requires security to be enabled
+        final boolean remoteClusterServerEnabled = explicitlyDisabled ? false : randomBoolean();
+        settings.put("remote_cluster_server.enabled", remoteClusterServerEnabled);
+        final boolean remoteClusterServerSslEnabled = randomBoolean();
+        settings.put("xpack.security.remote_cluster_server.ssl.enabled", remoteClusterServerSslEnabled);
+        final boolean remoteClusterClientSslEnabled = randomBoolean();
+        settings.put("xpack.security.remote_cluster_client.ssl.enabled", remoteClusterClientSslEnabled);
 
         boolean configureEnabledFlagForTokenService = randomBoolean();
         final boolean tokenServiceEnabled;
@@ -130,10 +148,7 @@ public class SecurityInfoTransportActionTests extends ESTestCase {
         final boolean httpIpFilterEnabled = randomBoolean();
         final boolean transportIPFilterEnabled = randomBoolean();
         when(ipFilter.usageStats()).thenReturn(
-            MapBuilder.<String, Object>newMapBuilder()
-                .put("http", Collections.singletonMap("enabled", httpIpFilterEnabled))
-                .put("transport", Collections.singletonMap("enabled", transportIPFilterEnabled))
-                .map()
+            Map.of("http", Map.of("enabled", httpIpFilterEnabled), "transport", Map.of("enabled", transportIPFilterEnabled))
         );
 
         final boolean rolesStoreEnabled = randomBoolean();
@@ -165,6 +180,40 @@ public class SecurityInfoTransportActionTests extends ESTestCase {
         if (operatorPrivilegesEnabled) {
             settings.put("xpack.security.operator_privileges.enabled", true);
         }
+
+        final Map<String, Object> userProfileUsage = Map.of(
+            "total",
+            randomIntBetween(100, 200),
+            "enabled",
+            randomIntBetween(50, 99),
+            "recent",
+            randomIntBetween(1, 42)
+        );
+        doAnswer(invocation -> {
+            @SuppressWarnings("unchecked")
+            final var listener = (ActionListener<Map<String, Object>>) invocation.getArguments()[0];
+            listener.onResponse(userProfileUsage);
+            return null;
+        }).when(profileService).usageStats(anyActionListener());
+
+        final int ccsKeys = randomIntBetween(0, 50);
+        final int ccrKeys = randomIntBetween(0, 50);
+        final int ccsCcrKeys = randomIntBetween(0, 50);
+        final Map<String, Object> crossClusterApiKeyUsage = Map.of(
+            "total",
+            ccsKeys + ccrKeys + ccsCcrKeys,
+            "ccs",
+            ccsKeys,
+            "ccr",
+            ccrKeys,
+            "ccs_ccr",
+            ccsCcrKeys
+        );
+        doAnswer(invocation -> {
+            final ActionListener<Map<String, Object>> listener = invocation.getArgument(0);
+            listener.onResponse(apiKeyServiceEnabled ? crossClusterApiKeyUsage : Map.of());
+            return null;
+        }).when(apiKeyService).crossClusterApiKeyUsageStats(anyActionListener());
 
         var usageAction = newUsageAction(settings.build());
         PlainActionFuture<XPackUsageFeatureResponse> future = new PlainActionFuture<>();
@@ -234,13 +283,34 @@ public class SecurityInfoTransportActionTests extends ESTestCase {
                 // operator privileges
                 assertThat(source.getValue("operator_privileges.available"), is(operatorPrivilegesAvailable));
                 assertThat(source.getValue("operator_privileges.enabled"), is(operatorPrivilegesEnabled));
-            } else {
-                if (explicitlyDisabled) {
-                    assertThat(source.getValue("ssl"), is(nullValue()));
-                } else {
-                    assertThat(source.getValue("ssl.http.enabled"), is(httpSSLEnabled));
-                    assertThat(source.getValue("ssl.transport.enabled"), is(transportSSLEnabled));
+
+                // user profile
+                assertThat(source.getValue("user_profile.total"), equalTo(userProfileUsage.get("total")));
+                assertThat(source.getValue("user_profile.enabled"), equalTo(userProfileUsage.get("enabled")));
+                assertThat(source.getValue("user_profile.recent"), equalTo(userProfileUsage.get("recent")));
+
+                assertThat(source.getValue("ssl.http.enabled"), is(httpSSLEnabled));
+                assertThat(source.getValue("ssl.transport.enabled"), is(transportSSLEnabled));
+                if (TcpTransport.isUntrustedRemoteClusterEnabled()) {
+                    if (remoteClusterServerEnabled) {
+                        assertThat(source.getValue("ssl.remote_cluster_server.enabled"), is(remoteClusterServerSslEnabled));
+                    } else {
+                        assertThat(source.getValue("ssl.remote_cluster_server.enabled"), nullValue());
+                    }
+                    assertThat(source.getValue("ssl.remote_cluster_client.enabled"), is(remoteClusterClientSslEnabled));
+                    assertThat(source.getValue("remote_cluster_server.available"), is(remoteClusterServerAvailable));
+                    assertThat(source.getValue("remote_cluster_server.enabled"), is(remoteClusterServerEnabled));
+                    if (apiKeyServiceEnabled) {
+                        assertThat(source.getValue("remote_cluster_server.api_keys.total"), equalTo(crossClusterApiKeyUsage.get("total")));
+                        assertThat(source.getValue("remote_cluster_server.api_keys.ccs"), equalTo(ccsKeys));
+                        assertThat(source.getValue("remote_cluster_server.api_keys.ccr"), equalTo(ccrKeys));
+                        assertThat(source.getValue("remote_cluster_server.api_keys.ccs_ccr"), equalTo(ccsCcrKeys));
+                    } else {
+                        assertThat(source.getValue("remote_cluster_server.api_keys"), anEmptyMap());
+                    }
                 }
+            } else {
+                assertThat(source.getValue("ssl"), is(nullValue()));
                 assertThat(source.getValue("realms"), is(nullValue()));
                 assertThat(source.getValue("token_service"), is(nullValue()));
                 assertThat(source.getValue("api_key_service"), is(nullValue()));
@@ -249,6 +319,8 @@ public class SecurityInfoTransportActionTests extends ESTestCase {
                 assertThat(source.getValue("ipfilter"), is(nullValue()));
                 assertThat(source.getValue("roles"), is(nullValue()));
                 assertThat(source.getValue("operator_privileges"), is(nullValue()));
+                assertThat(source.getValue("user_profile"), is(nullValue()));
+                assertThat(source.getValue("remote_cluster_server"), is(nullValue()));
             }
         }
     }
